Updating latest translation strings.

--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -35,8 +35,6 @@ cs:
   facebook: "Facebook"
   share success: "Vaše zpráva byla sdílena."
   share error: "Omlouváme, ve vaší zprávě se vyskytla chyba. Prosíme zkuste to znovu."
-  error following user: "Omlouváme se, vyskytla se chyba během pokusu o následování tohoto uživatele."
-  error unfollowing user: "Omlouváme se, vyskytla se chyba během odstraňování následování tohoto uživatele."
   google plus: "Google +"
   connect to: "Připojte se k vašemu %{connection} účtu"
   connected as user: "Jste připojeni ke službě %{connection} jako %{username}"
@@ -44,24 +42,13 @@ cs:
   deleted connection error: "Omlouváme se, vyskytla se chyba při odstraňování spojení se službou %{connection}."
   remove connection: "Odstranit"
   connection users: "Zde jsou někteří YouVersion uživatelé, s kterými jste spojeni na %{connection}u:"
-  connection marketing: "YouVersion je větší zábava s přáteli! Propojte váš YouVersion účet s ostatními sociálními sítěmi, hledejte a následujte vaše přátele na YouVersion. Propojení vašich účtů vám také umožní sdílet zajímavý obsah několika málo kliknutími. Nikdy na váš účet nebudeme nic sdílet bez vašeho souhlasu."
+  connection marketing: "Budete se více bavit, když budete sdílet YouVersion s přáteli! Propojte váš YouVersion účet s ostatními sociálními sítěmi a ihned najděte přátelé na YouVersion. Propojení vašich účtů vám také umožní sdílet obsah několika málo kliknutími. Nikdy neodešleme nic bez vašeho potvrzení. "
   next step connections: "Další: Propojte vaše účty a najděte své přátele"
-  you are now following: "Nyní následujete %{username}"
-  you are no longer following: "Už nenásledujete %{username}"
-  user follows: "%{user} vás následuje."
-  user does not follow: "%{user} vás nenásleduje."
-  no following found self: "Zatím nikoho nenásledujete. Navštivte stránku <a href='%{link}'>Najít přátele</a> a najděte si nějaké přátele!"
-  no followers found self: "Zatím nemáte žádné následovníky. Navštivte stránku <a href='%{link}'>Najít přátele</a> a najděte si nějaké přátele!"
-  no followers found other: "Uživatele %{username} zatím nikdo nenásleduje."
-  no following found other: "%{username} zatím nikoho nenásleduje."
-  no likes found: "Uživatel %{username} si zatím nic neoblíbil."
   no notes found: "Uživatel %{username} zatím nemá žádné poznámky."
   no recent activity: "Uživatel %{username} zatím nemá žádnou nedávnou aktivitu."
   no badges found yourself: "Zatím jste nezískali žádné odznaky."
   no badges found other: "%{username} zatím nezískal žádné odznaky."
   see users badges: "Zobrazit všechny odznaky uživatele %{username}"
-  followers: "Sledující"
-  following: "Následuji"
   bookmark: "Záložka"
   earned badge date: "Získáno uživatelem %{username} před %{ago}"
   badges title: "Odznaky"
@@ -143,13 +130,6 @@ cs:
   or:
     lower: "nebo"
     upper: "NEBO"
-  likes:
-    my likes: "Moje oblíbené"
-    all likes: "Všechny oblíbené"
-    none exist blurb: "Zatím se toto nikomu nelíbí!"
-    likes: "Líbilo se"
-    like button text: "Líbí se mi to"
-    unlike button text: "Nelíbí se mi"
   notes:
     list title: "Poznámky"
     loading community: "Načítání poznámek komunity..."
@@ -177,9 +157,7 @@ cs:
     not found: "YouVersion vám umožňuje připojit video, audio, obrázky, text a odkazy na jiné webové stránky k jakémukoli verši z Bible. Je to způsob, jak se zapojit do komunity YouVersion sdílením toho, co se právě učíte a nad čím přemýšlíte, když trávíte čas nad Písmem. Začněte označením verše(ů) v prohlížení Bible a přidáním vaší poznámky. Je to právě tak jednoduché."
     cancel: "Zrušit"
     pop out: "Vyskočit"
-    notes i like: "Mé oblíbené poznámky"
     none found: "Žádné poznámky nenalezeny..."
-    see my likes: "Zobrazit všechny mé oblíbené"
     successfully deleted: "Poznámka odstraněna"
   ref:
     loading secondary: "Načítají se odkazy v sekundárním překladu..."
@@ -206,8 +184,6 @@ cs:
   users:
     unverified heading: "Jste téměř u konce!"
     unverified message: "Vypadá to, že se snažíte přihlásit do účtu, u kterého ještě nebylo provedeno úplné nastavení. Máte před sebou už jen jeden krok: Jednoduše klikněte na ověřovací odkaz, který Vám byl zaslán v potvrzovacím e-mailu z YouVersion. Nemůžete jej najít? Podívejte se do Vaší nevyžádané pošty (spamu) a nebo si nechte znovu poslat <a href='%{resend_path}'>potvrzovací e-mail</a>."
-    not following you: "Nenásleduje vás"
-    following you: "Následuje vás"
     reset connection: "Promiňte, vyskytla se chyba. Prosím deaktivujte toto připojení a znovu ho připojte."
     settings: "Nastavení"
     no connection friends: "Žádný z vašich %{connection} přátel ještě není zaregistrovaný na YouVersion."
@@ -223,15 +199,8 @@ cs:
     welcome to youversion: "Vítejte v komunitě YouVersion!"
     confirm email: "Prosím zkontrolujte si svůj e-mail a klikněte na tlačítko pro potvrzení vaší registrace."
     sign up for an account: "Vytvořit zdarma YouVersion účet"
-    follow: "Sleduj"
-    follow user: "Sledovat %{user}"
-    unfollow: "Ukončit sledování"
-    unfollow user: "Ukončit sledování uživatele %{user}"
-    following title: "Lidé, které následuji"
-    user does not follow you: "%{user} vás nenásleduje."
     recent activity: "Nedávná aktivita"
     my recent_activity: "Moje nedávná aktivita"
-    started following: "Začal/a následovat"
     subscribed to plan: "Uživatelé čtoucí plán %{plan}"
     reading: "Uživatelé čtoucí tento plán"
     subscribed previously: "Započato před %{time_ago}"
@@ -262,8 +231,6 @@ cs:
     user friends: "Přátelé uživatele %{user}"
     my bookmarks: "Moje záložky"
     user bookmarks: "Záložky uživatele %{user}"
-    my likes: "Moje oblíbené"
-    user likes: "Oblíbené uživatele %{user}"
     my badges: "Moje odznaky"
     revised date: "Naposledy revidováno dne %{date}"
     update email copy: "Napište novou e-mailovou adresu a klikněte na \"Aktualizovat e-mail\". Zašleme vám odkaz k potvrzení vaší nové e-mailové adresy."
@@ -753,3 +720,6 @@ cs:
     public domain: "Veřejná doména"
     loading: "Načítání více překladů..."
     load error: "Omlouváme se, nepodařilo se načíst více překladů. Zavřete toto menu a otevřte jej znovu."
+  reader help:
+    title: "Vybrat verš..."
+    line 1: "Klikněte nebo se dotkněte jakéhokoli verše nebo souboru veršů a vytvořte záložku, zvýraznění, poznámku nebo to sdílejte s vašimi přáteli!"
