--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -35,8 +35,6 @@ de:
   facebook: "Facebook"
   share success: "Deine Nachricht wurde weitergeleitet."
   share error: "Entschuldigung, es gab ein Problem mit der Weiterleitung deiner Nachricht. Bitte versuche es noch einmal."
-  error following user: "Sorry, leider ist bei dem Versuch, diesem Benutzer zu folgen, ein Fehler aufgetreten."
-  error unfollowing user: "Sorry, leider ist bei dem Versuch, diesem Benutzer nicht mehr zu folgen, ein Fehler aufgetreten."
   google plus: "Google+"
   connect to: "Verbinde dich mit deinem %{connection} Konto."
   connected as user: "Du bist mit %{connection} als %{username} verbunden."
@@ -44,24 +42,13 @@ de:
   deleted connection error: "Entschuldigung, es ist ein Fehler bei der Abmeldung von %{connection} aufgetreten."
   remove connection: "Entfernen"
   connection users: "Hier sind einige YouVersion-Nutzer, mit denen du bei %{connection} verbunden bist:"
-  connection marketing: "YouVersion macht mehr Spaß mit Freunden! Verbinde dein YouVersion-Konto mit deinen sozialen Netzwerken und finde deine Freunde auf YouVersion blitzschnell. So kannst du ihnen auch auf YV folgen. Mit verbundenen Konten kannst du mit wenigen Klicks Inhalte teilen. Wir werden nie etwas ohne dein Einverständnis posten."
+  connection marketing: "YouVersion macht mehr Spaß mit Freunden! Verknüpfe dein YouVersion Konto mit deinen anderen sozialen Netzwerken und finde sofort deine Freunde auf YouVersion. Über die verknüpften Konten kannst du Inhalte mit nur wenigen Klicks teilen. Wir werden nie etwas ohne deine Zustimmung posten."
   next step connections: "Als nächstes: Verbinde deine Konten und finde deine Freunde."
-  you are now following: "Du folgst jetzt %{username}."
-  you are no longer following: "Du folgst jetzt %{username} nicht mehr."
-  user follows: "%{user} folgt dir jetzt."
-  user does not follow: "%{user} folgt dir nicht."
-  no following found self: "Du folgst bisher niemandem. Du solltest die Seite <a href='%{link}'>Freunde finden</a> besuchen und Freunde finden!"
-  no followers found self: "Es folgt dir bisher niemand. Du solltest zu <a href='%{link}'>Freunde finden</a> gehen und Freunde finden!"
-  no followers found other: "Bisher folgt niemand %{username}."
-  no following found other: "%{username} folgt bisher niemandem."
-  no likes found: "%{username} gefällt bisher nichts."
   no notes found: "%{username} hat keine Notizen."
   no recent activity: "%{username} hat keine neuen Aktivitäten."
   no badges found yourself: "Du hast bisher keine Abzeichen bekommen."
   no badges found other: "%{username} hat bisher keine Abzeichen bekommen."
   see users badges: "Sieh dir alle Abzeichen von %{username} an."
-  followers: "Follower"
-  following: "Following"
   bookmark: "Lesezeichen"
   earned badge date: "Verliehen an %{username} vor %{ago}"
   badges title: "Abzeichen"
@@ -143,13 +130,6 @@ de:
   or:
     lower: "oder"
     upper: "ODER:"
-  likes:
-    my likes: "Was mir gefällt"
-    all likes: "Alles, was mir gefällt"
-    none exist blurb: "Sorry, \"Gefällt mir\" gibt es hier leider noch nicht."
-    likes: "was mir gefällt"
-    like button text: "gefällt mir"
-    unlike button text: "gefällt mir nicht mehr"
   notes:
     list title: "Notizen"
     loading community: "Lade Gemeinschaftsnotizen... "
@@ -177,9 +157,7 @@ de:
     not found: "YouVersion ermöglicht es dir, Video-, Audio-, Bild-, Text-Dateien und Links zu anderen Internetseiten mit Versen oder Abschnitten der Bibel zu verbinden. So kannst du dich in der YouVersion-Gemeinschaft einfach einklinken, indem du das mitteilst, was du gelernt hast und denkst, während du dich mit der Heiligen Schrift befasst. Beginne, indem du einen oder mehrere Verse in der Leseansicht (d. h. im Reader) auswählst und füge deine Notiz hinzu. Es ist wirklich einfach."
     cancel: "Abbrechen"
     pop out: "In neuem Fenster anzeigen."
-    notes i like: "Notizen, die ich mag"
     none found: "Keine Notizen vorhanden"
-    see my likes: "Sieh alles, was ich mag"
     successfully deleted: "Notiz entfernt"
   ref:
     loading secondary: "Schriftstelle wird in der 2. Bibelversion geladen..."
@@ -206,8 +184,6 @@ de:
   users:
     unverified heading: "Fast fertig!"
     unverified message: "Es sieht so aus, al ob du dich mit einem Konto anmelden möchtest, dass noch nicht vollständig eingerichtet wurde. Du brauchst nur noch Folgendes zu tun: Klicke einfach auf den Bestätigungs-Link in der E-Mail, die du von YouVersion erhalten hast. Du kannst die E-Mail nicht finden? Überprüfe deinen Spam-Ordner oder <a href='%{resend_path}'>lasse sie dir erneut zuschicken</a>."
-    not following you: "folgt dir nicht."
-    following you: "folgt dir jetzt."
     reset connection: "Leider ist ein Fehler aufgetreten. Bitte trenne diese Verbindung und erstelle sie erneut. "
     settings: "Einstellungen"
     no connection friends: "Scheinbar sind noch keine %{connection}-Freunde von dir bei YouVersion."
@@ -223,15 +199,8 @@ de:
     welcome to youversion: "Willkommen in der YouVersion-Gemeinschaft!"
     confirm email: "Bitte rufe deine E-Mails ab und schließe die Registrierung mit einem Klick auf den Link ab. Danke."
     sign up for an account: "Melde dich für ein kostenloses YouVersion-Konto an"
-    follow: "Folgen"
-    follow user: "%{user} folgen"
-    unfollow: "Nicht mehr folgen"
-    unfollow user: "Folge %{user} nicht mehr"
-    following title: "Personen, denen ich folge"
-    user does not follow you: "%{user} folgt dir nicht."
     recent activity: "Jüngste Aktivitäten"
     my recent_activity: "Meine letzte Aktivität"
-    started following: "Du folgst nun:"
     subscribed to plan: "Benutzer, die %{plan} abonnieren."
     reading: "Andere, die diesen Leseplan auch benutzen"
     subscribed previously: "Angefangen vor %{time_ago}"
@@ -262,8 +231,6 @@ de:
     user friends: "%{user}s Freunde"
     my bookmarks: "Meine Lesezeichen"
     user bookmarks: "%{user}s Lesezeichen"
-    my likes: "Was ich mag"
-    user likes: "Was %{user} mag"
     my badges: "Meine Auszeichnungen"
     revised date: "Zuletzt überarbeitet am %{date}"
     update email copy: "Gib eine neue E-Mail-Ad­res­se ein und klicke auf E-Mail aktualisieren. Wir senden dir einen Link, damit du deine neue E-Mail-Ad­res­se bestätigen kannst."
@@ -703,7 +670,7 @@ de:
         subscribe heading: "Abonniere Bibellesepläne."
         subscribe description: "Entdecke die ganze Bibel, konzentriere dich auf ein Thema oder lies die Andacht von einem begabten Lehrer. Wähle einen Leseplan aus, dann wartet jeden Tag ein Bibelabschnitt auf dich."
         download heading: "Nimm die Bibel mit."
-        download description: "<a href='http://youversion.com/download'>Lade</a> die Bibel App kostenlos auf ein Smartphone herunter. Mit der Bibel App werden deine Notizen, Lesezeichen, Markierungen, Lesepläne uvm. automatisch auf allen deinen Geräte synchronisiert."
+        download description: "<a href='http://youversion.com/download'>Lade</a> die Bibel App kostenlos auf ein Smartphone herunter. Mit der Bibel App werden deine Notizen, Lesezeichen, Markierungen, Lesepläne uvm. automatisch auf allen deinen Geräten synchronisiert."
       get started: "Fang an mit einem kostenlosen YouVersion-Konto."
       word with you: "Gottes Wort ist mit dir."
       download action: "Lade die Bibel App herunter."
@@ -745,7 +712,7 @@ de:
     index title: "Verfügbare Übersetzung"
     publisher widget title: "Herausgeber"
     visit publisher: "Zur Website des Herausgebers"
-    read title: "Lese diese Version"
+    read title: "Lies diese Version"
     other versions: "Andere Versionen von diesem Herausgeber"
     number of versions field: "Anzahl der Übersetzungen: "
     number of languages field: "Anzahl der Sprachen:"
@@ -753,3 +720,6 @@ de:
     public domain: "Gemeinfrei"
     loading: "Lade weitere Übersetzungen..."
     load error: "Leider gab es ein Problem beim Laden weiterer Übersetzungen. Schließe dieses Menü und öffne es erneut, um es noch einmal zu versuchen."
+  reader help:
+    title: "Wähle einen Vers..."
+    line 1: "Klicke oder tippe auf einen Vers oder eine Sammlung von Versen, um Lesezeichen zu erstellen, zum Markieren, um eine Notiz zu erstellen oder mit deinen Freunden zu teilen!"
