--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -35,8 +35,6 @@ fi:
   facebook: "Facebook"
   share success: "Viestisi on jaettu."
   share error: "Viestisi jakamisessa on tapahtunut virhe. Ole hyvä ja yritä uudelleen."
-  error following user: "Valitettavasti käyttäjän seuraaminen epäonnistui."
-  error unfollowing user: "Valitettavasti käyttäjän seuraamisen lopettaminen epäonnistui."
   google plus: "Google +"
   connect to: "Yhdistä %{connection} -tiliisi"
   connected as user: "Sinut on yhdistetty kohteeseen %{connection} käyttäjänimellä %{username}."
@@ -44,24 +42,13 @@ fi:
   deleted connection error: "Valitettavasti %{connection}  -yhteytesi poistaminen epäonnistui."
   remove connection: "Poista"
   connection users: "Tässä muutama YouVersion-käyttäjä, joihin olet yhteydessä kohteen %{connection} kautta:"
-  connection marketing: "YouVersion on hauskempi ystävien kanssa! Linkitä YouVersion-tilisi muihin yhteisöpalveluihin, löydät hetkessä ystäväsi ja voit seurata heitä YouVersionissa. Tiliesi linkittäminen mahdollistaa myös sisällön jakamisen muutamalla klikkauksella. Emme koskaan lähetä mitään ilman sinun hyväksyntääsi."
+  connection marketing: "YouVersion on hauskempi ystävien kanssa! Linkitä YouVersion-tilisi muiden sosiaalisen median palveluiden kanssa ja löydä ystäväsi, jotka ovat myös YouVersionissa. Tilien linkitys mahdollistaa myös sisällön jakamisen vain muutamalla klikkauksella. Emme koskaan julkaise mitään ilman sinun hyväksyntääsi."
   next step connections: "Seuraavaksi: Linkitä tilisi ja löydä ystäväsi"
-  you are now following: "Seuraat nyt käyttäjää % {username}"
-  you are no longer following: "Et enää seuraa käyttäjää %{username}"
-  user follows: "Käyttäjä %{user} seuraa sinua."
-  user does not follow: "Käyttäjä %{user} ei seuraa sinua."
-  no following found self: "Et seuraa vielä ketään. Vieraile <a href='%{link}'>Etsi ystäviä</a> -sivulla ja löydä ystäviä!"
-  no followers found self: "Sinulla ei ole vielä seuraajia. Vieraile <a href='%{link}'>Etsi ystäviä</a> -sivulla ja löydä ystäviä!"
-  no followers found other: "Kukaan ei vielä seuraa käyttäjää %{username}."
-  no following found other: "%{username} ei seuraa ketään vielä."
-  no likes found: "Käyttäjällä %{username} ei ole vielä yhtään tykkäystä."
   no notes found: "Käyttäjällä %{username} ei ole muistiinpanoja."
   no recent activity: "Käyttäjällä %{username} ei ole viimeaikaisia toimintoja."
   no badges found yourself: "Et ole vielä ansainnut yhtään ansiomerkkiä."
   no badges found other: "%{username} ei ole ansainnut vielä yhtään ansiomerkkiä."
   see users badges: "Katso kaikki käyttäjän %{username} ansiomerkit"
-  followers: "Seuraajat"
-  following: "Seuratut"
   bookmark: "Kirjanmerkki"
   earned badge date: "Ansainnut %{username} %{ago} sitten"
   badges title: "Ansiomerkit"
@@ -143,13 +130,6 @@ fi:
   or:
     lower: "tai"
     upper: "TAI"
-  likes:
-    my likes: "Tykkäämiseni"
-    all likes: "Kaikki tykkäämiset"
-    none exist blurb: "Pahoittelut, ei tykkäämisiä täällä!"
-    likes: "Tykkäämiset"
-    like button text: "Tykkää"
-    unlike button text: "En tykkääkään"
   notes:
     list title: "Muistiinpanot"
     loading community: "Yhteisön tekemiä muistiinpanoja ladataan..."
@@ -177,9 +157,7 @@ fi:
     not found: "Voit yhdistää YouVersionin avulla videoita, musiikkia, kuvia ja tekstiä Raamatun jakeilla höystettynä muille nettisivuille. Näin voit osallistua YouVersion-yhteisön toimintaan jakamalla oppimaasi ja ajatuksiasi, kun vietät aikaasi Sanan parissa. Aloita valitsemalla Raamatun jae (jakeet) lukijaan ja lisää kommentti. Niin helppoa se on."
     cancel: "Peruuta"
     pop out: "Näytä"
-    notes i like: "Muistiinpanot, joista tykkään"
     none found: "Muistiinpanoja ei löytynyt..."
-    see my likes: "Näytä kaikki tykkäämiseni"
     successfully deleted: "Muistiinpano poistettu"
   ref:
     loading secondary: "Ladataan kohtaa toisesta käännöksestä..."
@@ -206,8 +184,6 @@ fi:
   users:
     unverified heading: "Melkein valmista!"
     unverified message: "Yritit kirjautua tilille, jota ei ole vielä vahvistettu. Jäljellä on vielä yksi vaihe: klikkaa vahvistusviestissä YouVersionilta saamaasi linkkiä. Etkö löydä sitä? Tarkista roskaposti-kansiosi tai <a href='%{resend_path}'>lähetä vahvistusviesti uudelleen</a>."
-    not following you: "Ei seuraa sinua"
-    following you: "Seuraa sinua"
     reset connection: "Tapahtui virhe. Ole hyvä ja poista yhteys ja muodosta se sitten uudelleen."
     settings: "Asetukset"
     no connection friends: "Kukaan %{connection}-kavereistasi ei ole vielä YouVersionissa."
@@ -223,15 +199,8 @@ fi:
     welcome to youversion: "Tervetuloa YouVersion-yhteisöön!"
     confirm email: "Ole hyvä ja tarkista sähköpostisi ja klikkaa linkkiä vahvistaaksesi rekisteröitymisen."
     sign up for an account: "Luo ilmainen YouVersion-tili"
-    follow: "Seuraa"
-    follow user: "Seuraa käyttäjää %{user}"
-    unfollow: "Lopeta seuraaminen"
-    unfollow user: "Lopeta käyttäjän %{user} seuraaminen"
-    following title: "Ihmiset, joita seuraan"
-    user does not follow you: "Käyttäjä %{user} ei seuraa sinua."
     recent activity: "Viimeaikainen toiminta"
     my recent_activity: "Viimeaikaiset toimintoni"
-    started following: "Alkoi seurata"
     subscribed to plan: "Käyttäjät, jotka ovat tilanneet %{plan} -suunnitelman"
     reading: "Käyttäjät, jotka lukevat tätä suunnitelmaa"
     subscribed previously: "Aloitti %{time_ago} sitten"
@@ -262,8 +231,6 @@ fi:
     user friends: "Käyttäjän %{user} ystävät"
     my bookmarks: "Kirjanmerkkini"
     user bookmarks: "Käyttäjän %{user} kirjanmerkit"
-    my likes: "Tykkäykseni"
-    user likes: "Käyttäjän %{user} tykkäykset"
     my badges: "Omat ansiomerkkini"
     revised date: "Viimeksi tarkistettu %{date}"
     update email copy: "Syötä uusi sähköpostiosoite ja klikkaa Päivitä sähköpostiosoite. Lähetämme sinulle linkin, jota klikkaamalla vahvistat uuden sähköpostiosoitteesi."
@@ -704,7 +671,7 @@ fi:
         subscribe description: "Lue koko Raamattu, keskity tiettyihin aihealueisiin tai lue hartauksia lahjakkailta opettajilta. Valitse suunnitelmasi ja sinua odottaa joka päivä valikoima raamatunkohtia."
         download heading: "Ota Raamattu mukaasi."
         download description: "<a href='http://youversion.com/download'>Lataa</a> Raamattusovellus ilmaiseksi mille tahansa mobiililaitteelle. Kun käytät mobiilisovellusta, muistiinpanosi, kirjanmerkkisi, korostuksesi, suunnitelmasi ja paljon muuta synkronoituu automaattisesti kaikille laitteillesi."
-      get started: "Aloita ilmaisen tilin käyttö."
+      get started: "Aloita ilmainen käyttö."
       word with you: "Jumalan Sana on kanssasi."
       download action: "Lataa Raamattusovellus"
       download description: "Lataa ilmainen YouVersionin Raamattusovellus mobiililaitteeseesi ja sinulla on Raamattu mukanasi mihin tahansa menetkin."
@@ -753,3 +720,6 @@ fi:
     public domain: "Tekijänoikeusvapaa"
     loading: "Ladataan enemmän käännöksiä..."
     load error: "Käännöksien latauksessa tapahtui valitettavasti virhe. Sulje tämä valikko ja avaa uudestaan."
+  reader help:
+    title: "Valitse jae..."
+    line 1: "Klikkaa tai napauta mitä tahansa jaetta tai jakeita tehdäksesi kirjanmerkin, korostaaksesi, luodaksesi muistiinpanon tai jakaaksesi ystävillesi!"
