--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,14 +1,20 @@
 fr:
   api:
-    users email email: "L'adresse e-mail n'est pas valide."
-    users email email rfc: "L'adresse email saisie n'est pas valide."
+    users agree bool: "Vous devez accepter les conditions pour créer un compte."
+    users confirm password matches: "Les mots de passe ne correspondent pas."
+    users email email: "L'adresse email est invalide."
+    users email email rfc: "L'adresse email saisie est invalide."
     users email not available: "Cette adresse email est déjà associée à un compte."
     users email not found: "Il n'y a pas de compte avec cette adresse email."
+    users email required: "Vous devez entrer une adresse email."
     users hash verified: "Ce compte a déjà été vérifié."
+    users password change: "Votre nouveau mot de passe doit être différent de l'ancien."
     users password length: "Le mot de passe doit contenir au moins 6 caractères."
+    users password required: "Vous devez saisir un mot de passe."
     users username alpha numeric extra: "Le nom d'utilisateur ne doit contenir que des lettres, des chiffres ou des tirets."
     users username not available: "Le nom d'utilisateur saisi n'est pas disponible."
     users username or password invalid: "Le nom d'utilisateur ou le mot de passe est invalide."
+    users username required: "Vous devez saisir un identifiant."
   now: "Maintenant"
   celebrating 50MM: "Célébration des 50 millions d'installations de cette app!"
   link: "Lien"
@@ -29,8 +35,6 @@ fr:
   facebook: "Facebook"
   share success: "Votre message a été partagé."
   share error: "Désolé, une erreur s'est produite lors du partage de votre message. Veuillez réessayer."
-  error following user: "Désolé, une erreur s'est produite lors de l'abonnement à cet utilisateur."
-  error unfollowing user: "Désolé, une erreur s'est produite lors de l'arrêt d'abonnement à cet utilisateur."
   google plus: "Google +"
   connect to: "Vous connecter à votre compte %{connection}"
   connected as user: "Vous êtes connectés à %{connection} en tant que %{username}."
@@ -38,24 +42,13 @@ fr:
   deleted connection error: "Désolé, suite à une erreur, votre connexion à %{connection} n'a pu être supprimée."
   remove connection: "Supprimer"
   connection users: "Les utilisateurs de YouVersion auxquels vous êtes connectés sur %{connection}:"
-  connection marketing: "YouVersion est plus amusant avec des amis ! Reliez votre compte YouVersion à vos autres autres réseaux sociaux puis trouvez et suivez vos amis instantanément sur YouVersion. Le fait de lier vos comptes vous permet également d'en partager le contenu en quelques clics. Nous n'afficherons rien sans votre consentement."
+  connection marketing: "YouVersion est plus amusant entre amis ! Connectez votre compte YouVersion à vos autres réseaux sociaux et trouvez immédiatement vos amis sur YouVersion. Connecter vos comptes vous permet aussi de partager du contenu en quelques clics. Nous ne posterons jamais rien sans votre accord."
   next step connections: "Ensuite: Reliez votre compte et retrouvez vos amis"
-  you are now following: "Maintenant vous suivez %{username}"
-  you are no longer following: "Vous ne suivez plus %{username}"
-  user follows: "%{user} vous suit."
-  user does not follow: "%{user} ne vous suit pas."
-  no following found self: "Vous n'avez aucun abonnement pour l'instant. Visitez la page <a href='%{link}'>Trouver des amis</a> et faites-vous des amis!"
-  no followers found self: "Vous n'avez aucun abonné pour l'instant. Visitez la page <a href='%{link}'>Trouver des amis</a> et trouvez des amis!"
-  no followers found other: "%{username} n'a pour l'instant aucun abonné."
-  no following found other: "%{username} n'a aucun abonnement pour l'instant."
-  no likes found: "%{username} n'a pas encore de mentions j'aime."
   no notes found: "%{username} n'a pas de notes."
   no recent activity: "%{username} n'a pas d'activités récentes."
   no badges found yourself: "Vous n'avez gagné aucun badge pour l'instant."
   no badges found other: "%{username} n'a gagné aucun badge pour l'instant."
   see users badges: "Voir tous les badges de %{username}"
-  followers: "Abonnés"
-  following: "Abonnements"
   bookmark: "Signet"
   earned badge date: "Gagné par %{username} il y a %{ago}"
   badges title: "Badges"
@@ -104,7 +97,7 @@ fr:
   search: "Recherche"
   book: "Livre"
   filter book: "Filtre par Livre"
-  save: "Sauvegarder"
+  save: "Sauver"
   cancel: "Annuler"
   try the beta: "Essayer la version bêta"
   welcome to the beta: "Bienvenue sur le nouveau site YouVersion.com!"
@@ -137,13 +130,6 @@ fr:
   or:
     lower: "ou"
     upper: "OU"
-  likes:
-    my likes: "Mes coups de cœur"
-    all likes: "Tous les coups de cœur"
-    none exist blurb: "Désolé, aucun coup de cœur ici!"
-    likes: "Les coups de cœur"
-    like button text: "J'aime"
-    unlike button text: "Je n'aime plus"
   notes:
     list title: "Notes"
     loading community: "Chargement des notes de la communauté ..."
@@ -171,9 +157,7 @@ fr:
     not found: "YouVersion vous permet d'associer une vidéo, une bande audio, un texte et des liens vers d'autres sites internet avec un verset ou un groupe de versets dans la Bible. C'est une manière de prendre part à la communauté YouVersion en partageant ce que vous apprenez et ce que vous pensez pendant que vous lisez la Parole. Commencez dès maintenant en sélectionnant un (des) verset(s) dans le lecteur de la Bible et en ajoutant une note. C'est si facile."
     cancel: "Annuler"
     pop out: "Nouvelle fenêtre"
-    notes i like: "Notes avec la mention j'aime"
     none found: "Pas de notes trouvées."
-    see my likes: "Voir toutes mes mentions j'aime"
     successfully deleted: "Note supprimée"
   ref:
     loading secondary: "Charge les références dans la version secondaire..."
@@ -200,8 +184,6 @@ fr:
   users:
     unverified heading: "C'est presque fini!"
     unverified message: "Il semblerait que vous essayez de vous connecter à un compte qui n'a pas été complètement paramétré. Il ne reste plus qu'une seule étape : il suffit de cliquer sur le lien contenu dans l'email de confirmation que vous avez reçu de YouVersion. Vous ne le trouvez pas ? Vérifiez dans vos courriers indésirables ou <a href='%{resend_path}'>demandez le renvoi de l'email de confirmation</a>."
-    not following you: "Ne vous suit pas"
-    following you: "Vous suit"
     reset connection: "Désolé, une erreur est survenue! Merci de vous déconnecter et vous reconnecter à nouveau."
     settings: "Paramètres"
     no connection friends: "Aucun de vos amis %{connection} ne semblent encore être sur YouVersion."
@@ -217,15 +199,8 @@ fr:
     welcome to youversion: "Bienvenue dans la communauté YouVersion!"
     confirm email: "Veuillez consulter votre courriel et cliquer sur le lien afin de confirmer votre inscription."
     sign up for an account: "Créer un compte YouVersion gratuit"
-    follow: "S'abonner"
-    follow user: "S'abonner à %{user}"
-    unfollow: "Se désabonner"
-    unfollow user: "Se désabonner de %{user}"
-    following title: "Personnes que je suis"
-    user does not follow you: "%{user} ne vous suit pas"
     recent activity: "Les activités récentes"
     my recent_activity: "Mes activités récentes"
-    started following: "S'est abonné"
     subscribed to plan: "Les utilisateurs inscrits au %{plan}"
     reading: "Les utilisateurs lisant ce plan"
     subscribed previously: "Commencé il y a %{time_ago}"
@@ -236,6 +211,7 @@ fr:
     other user profile: "Profil de %{username}"
     my password: "Modifier mon mot de passe"
     edit password: "Modifier le mot de passe"
+    edit password errors: "Les erreurs suivantes empêchent de changer votre mot de passe :"
     picture: "Photo"
     edit picture: "Modifier la photo"
     edit notifications: "Gérer les notifications"
@@ -255,8 +231,6 @@ fr:
     user friends: "Les amis de %{user}"
     my bookmarks: "Mes signets"
     user bookmarks: "Les signets de %{user}"
-    my likes: "Mes coups de cœur"
-    user likes: "Les coups de cœur de %{user}"
     my badges: "Mes badges"
     revised date: "Dernière révision faite le %{date}"
     update email copy: "Entrez un nouvel email et cliquez sur Mettre à jour l'adresse Email. Vous recevrez un lien pour confirmer votre nouvelle adresse."
@@ -479,7 +453,7 @@ fr:
     end date _ before date string: "Date de fin:"
     are you behind: "Vous avez pris du retard?"
     do you want to reset: "Vous voulez recommencer à zéro ?"
-    catch up text: "Remplacez votre lecture du jour par celle du dernier jour achevé (jour %{last_completed_day} du plan)."
+    catch up text: "Ramenez votre lecture du jour à celle du dernier jour achevé (jour %{last_completed_day} du plan)."
     catch up description only: "En retard dans votre lecture, pas de soucis! Vous pouvez toujours la reprendre à partir de vos dernières lectures achevées."
     catch me up: "Me rattrapper"
     restart description: "Vous pouvez recommencer votre plan. Tous vos progrès et historiques de lecture seront effacés et vous recommencerez depuis le début."
@@ -528,10 +502,27 @@ fr:
     must start to complete: "Commencez ce plan pour sauvegarder les lectures achevées!"
     invalid reference: "Désolé, une des références Biblique pour cette lecture semble ne plus exister pour cette traduction. Veuillez sélectionner une autre traduction. Si vous rencontrez à nouveau ce message, veuillez prévenir notre <a href='%{support_url}'>équipe de support</a> à propos de ce problème."
     sidebar notice: "Vous visualisez un plan de lecture"
+    completed notice: "Félicitations ! Vous avez terminé votre plan de lecture."
     exit: "Quitter"
+    loading sidebar content: "Chargement de la barre de menu..."
   licenses:
+    authorized:
+      heading: "Votre contenu a été autorisé."
+      description: "Vous pouvez désormais <a href='%{content_link}'>consulter le contenu que vous avez acheté</a> de %{vendor} sur YouVersion !"
+    has errors: "Votre requête contenait des erreurs :"
+    confirm:
+      email: "Pour autoriser le contenu vidéo que vous avez acheté, veuillez cliquer sur le lien qui se trouve dans l'email de confirmation que vous avez reçu de YouVersion."
+    request:
+      invalid_vendor_signature: "Echec de validation de la licence : signature de fournisseur invalide"
+      invalid_vendor_id: "Echec de validation de licence : Identifiant fournisseur invalide"
+      invalid_item_ids: "Echec de validation de licence : Elements invalides"
+    vendor_transaction_id:
+      duplicate: "Identifiant de transaction : cet identifiant a déjà été enregistré"
     auth:
-      login link text: "connexion"
+      login notice: "Pour valider le contenu acheté, veuillez vous identifier avec votre compte YouVersion ci-dessous ou <a href='/sign-up?source=licenses'>%{signup}</a>."
+      signup notice: "Pour valider le contenu que vous avez acheté, créez un compte YouVersion gratuit ci-dessous ou <a href='/sign-in?source=licenses'>%{login}</a> si vous en avez déjà un."
+      signup link text: "Créez un compte gratuit"
+      login link text: "s'identifier"
   registration:
     placeholder:
       email: "Saisissez votre adresse email"
@@ -544,7 +535,7 @@ fr:
     plan blurb: "Disposé à entamer un plan de lecture? Astucieux!  Les plans vous aident à intégrer la Bible dans votre quotidien. Connectez-vous ou créez un compte en cliquant sur le lien ci-dessous, puis laissez-vous conduire!"
     bookmark blurb: "Besoin d'utiliser la fonction \"favoris\"? Excellente idée! Elle permet de noter les versets que vous voulez mémoriser, partager ou les marquer. Connectez-vous ou créez un compte en cliquant sur le lien ci-dessous, puis commencez!"
     friends blurb: "Envie d'échanger avec des amis? Excellent! Vous pourrez partager vos expériences et vous entraider pour atteindre vos objectifs de lecture. Connectez-vous ou créez un compte en cliquant sur le lien ci-dessous, et jetez-vous à l'eau!"
-    share blurb: "Il semble que vous vouliez partager une image. Super ! Vous allez pouvoir partager des versets via Facebook ou Twitter. Connectez-vous ou créez un compte ci-dessous pour démarrer !"
+    share blurb: "Il semble que vous vouliez partager des versets. Formidable ! Vous allez pouvoir partager des versets via Facebook ou Twitter. Connectez-vous ou créez un compte ci-dessous pour démarrer !"
     highlight blurb: "Vous voulez suligner ce passage? Bonne idée! Surligner peut vous aider à organiser et garder le fil des vos passages préférés. Connectez-vous ou créez un compte en cliquant sur le lien ci-dessous, puis commencez!"
     note blurb: "Vous voulez prendre des notes sur ce passage? Bonne idée! Les notes vous aident à organiser et vous remémorer les révélations que vous avez dans la Parole. Connectez-vous ou créez un compte en cliquant sur le lien ci-dessous et lancez-vous!"
   audio:
@@ -677,13 +668,13 @@ fr:
         study heading: "Etudier la Bible"
         study description: "<strong>Surlignez</strong>avec votre couleur préférée, <strong>sauvegardez</strong> vos versets bibliques préférés, et prenez des notes à propos de ce que vous apprenez. Non seulement vous passez le temps dans la Parole de Dieu, mais vous bâtissez aussi une histoire de votre interaction avec la Bible."
         subscribe heading: "S'abonner aux Plans biblques."
-        subscribe description: "Parcourez la Bible en entier, concentrez-vous sur un sujet, ou lisez une pensée d'un enseignant doué. Choisissez votre plan et chaque jour vous trouverez une selection de la Bible en train de vous attendre."
+        subscribe description: "Parcourez la Bible en entier, concentrez-vous sur un sujet, ou lisez une pensée d'un enseignant qualifié. Choisissez votre plan et chaque jour vous trouverez une sélection de la Bible rien que pour vous."
         download heading: "Prenez la Bible avec vous."
         download description: "<a href='http://youversion.com/download'>Téléchargez</a> gratuitement la Bible App sur tous les appareils mobiles. Quand vous utilisez l'application mobile, vos notes, favoris, surlignages, et plus seront automatiquement synchronisés sur tous vos appareils"
       get started: "Débutez avec votre compte gratuit."
       word with you: "La Parole de Dieu est avec vous."
       download action: "Téléchargez la Bible App"
-      download description: "Téléchargez gratuitement Youversion Bible App sur votre appareil mobile et vous aurez votre Bible peu importe où vous allez."
+      download description: "Téléchargez gratuitement la Bible App YouVersion sur votre appareil mobile et vous aurez toujours votre Bible avec vous."
       world installs: "Installations dans le monde"
   shared:
     menu_settings:
@@ -706,6 +697,8 @@ fr:
       translation notes: "Notes de bas de page"
       cross references: "Références croisées"
   app errors:
+    404 plans explanation: "Cherchez-vous le plan <a href='%{plan_path}'>%{title}</a> ?"
+    404 contact support: "Un problème ? Contactez <a href='%{support_url}'>l'assistance</a>."
     404 explanation: "Vous devrez peut être ré-essayer depuis <a href='%{reader_path}'>Accueil</a>. Cela ne fonctionne pas? Contactez notre <a href='%{support_url}'>assistance technique</a>."
     404 message: "Nous sommes désolés, la page que vous cherchez ne peut être trouvée."
     408 message: "Nous sommes désolés, mais nos serveurs n'ont pas répondu dans un délai raisonnable."
@@ -727,3 +720,6 @@ fr:
     public domain: "Domaine public"
     loading: "Chargement d'autres versions..."
     load error: "Désolé, il y a eu un problème de chargement d'autres versions. Fermez ce menu et rouvrez-le pour réessayer."
+  reader help:
+    title: "Sélectionnez un verset."
+    line 1: "Cliquez sur n'importe quel verset ou groupe de versets pour les marquer, surligner, créer une note ou les partager avec vos amis !"
