--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -35,8 +35,6 @@ id:
   facebook: "Facebook"
   share success: "Pesan Anda telah dibagikan."
   share error: "Maaf, terjadi kesalahan saat membagikan pesan Anda. Cobalah kembali."
-  error following user: "Maaf, kesalahan terjadi saat mengikuti pengguna tersebut."
-  error unfollowing user: "Maaf, kesalahan terjadi saat berhenti mengikuti pengguna tersebut."
   google plus: "Google +"
   connect to: "Hubungkan dengan akun %{connection} Anda"
   connected as user: "Anda terhubung dengan %{connection} sebagai %{username}."
@@ -44,24 +42,13 @@ id:
   deleted connection error: "Maaf, terjadi kesalahan saat memutus sambungan Anda ke %{connection}."
   remove connection: "Hapus"
   connection users: "Beberapa pengguna YouVersion yang terhubung dengan Anda di %{connection}:"
-  connection marketing: "YouVersion lebih seru bersama teman-teman! Tautkan akun YouVersion Anda ke jejaring sosial Anda lainnya dan langsung temukan serta ikuti teman-teman Anda di YouVersion. Penautan akun-akun Anda juga memungkinkan Anda berbagi isi hanya dengan beberapa klik. Kami tidak akan pernah menampilkan apapun tanpa persetujuan Anda."
+  connection marketing: "YouVersion lebih seru bersama teman! Sambungkan akun YouVersion anda dengan jaringan sosial yang lain untuk menemukan teman anda di YouVersion dengan instan. Penyambungan akun anda juga memungkinkan pembagian konten dengan hanya beberapa klik saja. Kami tidak akan pernah kirim sesuatu tanpa sepengetahuan anda."
   next step connections: "Berikut: Tautkan akun-akun Anda dan temukan teman-teman Anda"
-  you are now following: "Anda sekarang mengikuti %{username}"
-  you are no longer following: "Anda tidak lagi mengikuti %{username}"
-  user follows: "%{user} mengikuti Anda."
-  user does not follow: "%{user} tidak mengikuti Anda."
-  no following found self: "Anda belum mengikuti siapapun. Kunjungi halaman <a href='%{link}'>Temukan Teman</a> dan temukan beberapa teman!"
-  no followers found self: "Anda belum mempunyai pengikut. Kunjungi halaman <a href='%{link}'>Temukan Teman</a> dan temukan beberapa teman!"
-  no followers found other: "Belum ada yang mengikuti %{username}."
-  no following found other: "%{username} belum mengikuti siapapun."
-  no likes found: "%{username} belum menyukai apapun."
   no notes found: "%{username} tidak memiliki catatan apapun."
   no recent activity: "%{username} tidak memiliki aktivitas terkini."
   no badges found yourself: "Anda belum memperoleh lencana apapun."
   no badges found other: "%{username} belum memperoleh lencana apapun."
   see users badges: "Lihat semua lencana %{username}"
-  followers: "Pengikut"
-  following: "Mengikuti"
   bookmark: "Markah"
   earned badge date: "Diperoleh %{username} %{ago} yang lalu"
   badges title: "Lencana"
@@ -143,13 +130,6 @@ id:
   or:
     lower: "atau"
     upper: "ATAU"
-  likes:
-    my likes: "Kesukaan Saya"
-    all likes: "Semua Kesukaan"
-    none exist blurb: "Maaf, tak ada suka di sini!"
-    likes: "Kesukaan"
-    like button text: "Suka"
-    unlike button text: "Batal Suka"
   notes:
     list title: "Catatan"
     loading community: "Memuat catatan komunitas..."
@@ -177,9 +157,7 @@ id:
     not found: "YouVersion memungkinkan Anda menggabungkan video, suara, gambar, teks, dan tautan ke website lain dengan ayat atau perikop ayat manapun di Alkitab. Ini adalah cara berpartisipasi di komunitas YouVersion dengan membagikan apa yang anda pelajari dan pikirkan saat Anda membaca Kitab Suci. Mulailah sekarang dengan memilih ayat(-ayat) di alat pembaca Alkitab dan tambahkan catatan Anda. Semudah itu."
     cancel: "Batalkan"
     pop out: "Pop out"
-    notes i like: "Catatan yang Saya Suka"
     none found: "Tidak ditemukan catatan..."
-    see my likes: "Lihat Semua Kesukaan Saya"
     successfully deleted: "Catatan dihapus"
   ref:
     loading secondary: "Memuat Refrensi dalam Versi Kedua..."
@@ -206,8 +184,6 @@ id:
   users:
     unverified heading: "Hampir Selesai!"
     unverified message: "Tampaknya Anda mencoba untuk masuk dengan menggunakan akun yang belum sepenuhnya siap. Anda hanya perlu satu langkah lagi: cukup dengan mengklik tautan verifikasi yang terdapat dalam e-mail konfirmasi yang anda terima dari YouVersion. Tidak dapat menemukannya? Cek kotak spam Anda atau <a href='%{resend_path}'>kirim ulang e-mail konfirmasi</a>."
-    not following you: "Tidak mengikuti Anda"
-    following you: "Mengikuti Anda"
     reset connection: "Maaf, terjadi sebuah kesalahan. Silakan tutup dan kemudian hubungkan kembali sambungan ini."
     settings: "Pengaturan"
     no connection friends: "Tidak ada teman %{connection} anda yang menggunakan YouVersion."
@@ -223,15 +199,8 @@ id:
     welcome to youversion: "Selamat datang di komunitas YouVersion!"
     confirm email: "Periksalah email Anda dan klik tautan untuk mengkonfirmasi pendaftaran Anda."
     sign up for an account: "Buat Akun Gratis YouVersion"
-    follow: "Ikuti"
-    follow user: "Mengikuti %{user}"
-    unfollow: "Batal ikuti"
-    unfollow user: "Stop mengikuti %{user}"
-    following title: "Orang-orang yang saya ikuti"
-    user does not follow you: "%{user} tidak ikuti Anda"
     recent activity: "Aktivitas Terkini"
     my recent_activity: "Aktifitas Terkini Saya"
-    started following: "Mulai ikuti"
     subscribed to plan: "Pengguna Berlangganan %{plan}"
     reading: "Pengguna Membaca Rencana Bacaan Ini"
     subscribed previously: "Dimulai %{time_ago} yang lalu"
@@ -262,8 +231,6 @@ id:
     user friends: "Teman-teman %{user}"
     my bookmarks: "Markah saya"
     user bookmarks: "Markah dari %{user}"
-    my likes: "Kesukaan Saya"
-    user likes: "Kesukaan %{user}"
     my badges: "Lencana Saya"
     revised date: "Terakhir diubah pada %{date}"
     update email copy: "Masukkan alamat email baru dan klik Perbarui Email. Kami akan mengirimi Anda tautan untuk menetapkan alamat email baru Anda."
@@ -753,3 +720,6 @@ id:
     public domain: "Ranah Umum"
     loading: "Memuat Lebih Banyak Versi..."
     load error: "Maaf, ada masalah untuk memuat lebih banyak versi. Tutup menu ini dan buka kembali untuk mencoba."
+  reader help:
+    title: "Pilih ayat..."
+    line 1: "Klik atau tekan ayat yang mana saja ataupun sekumpulan ayat untuk menanda, soroti, ciptakan catatan, atau berbagi dengan teman-teman anda!"
