--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -35,8 +35,6 @@ ja:
   facebook: "Facebook"
   share success: "メッセージがシェアされました"
   share error: "メッセージのシェアに失敗しました。もう一度、実行してください。"
-  error following user: "申し訳ございません。このユーザーをフォローしようとしてエラーが発生しました"
-  error unfollowing user: "申し訳ございません。このユーザーのフォローを解除時にエラーが発生しました"
   google plus: "Google +"
   connect to: "%{connection} アカウントに連携"
   connected as user: "%{username} として %{connection} に連携されました。"
@@ -44,24 +42,13 @@ ja:
   deleted connection error: "申し訳ございません。%{connection} への連携設定の解除でエラーが発生しました。"
   remove connection: "解除"
   connection users: "%{connection} であなたとコネクトしているYouVersionユーザ:"
-  connection marketing: "友だちと一緒ならYouVersion はもっと楽しくなります！YouVersion アカウントをソーシャル・ネットワーク・サービスとリンクさせて、YouVersion 上で友だちを探してフォローしてみましょう。リンクすれば、あなたのコンテンツをほんの数クリックで仲間にシェアできます。こちらで許可なく掲載することはありません。"
+  connection marketing: "お友達と一緒なら、YouVersionをより楽しくご利用いただけます！YouVersionのアカウントを、ご利用のその他ソーシャルネットワークとリンクすることで、YouVersionを利用しているお友達を直ちに見つけることができます。また、アカウントをリンクすることで、コンテンツを簡単にシェアできるようになります。YouVersionが無断で投稿することはないのでご安心ください。"
   next step connections: "次: アカウントをリンクして友だちを探す"
-  you are now following: "%{username} さんをフォローしています"
-  you are no longer following: "もう %{username} さんをフォローしていません"
-  user follows: "%{user} さんがあなたをフォローしています"
-  user does not follow: "%{user} さんはあなたをフォローしていません。"
-  no following found self: "まだ誰もフォローしていないようです。 <a href='%{link}'>友だちを検索</a> ページに行き、友だちを探してみましょう!"
-  no followers found self: "まだ誰もフォロワーがいないようです。 <a href='%{link}'>友だちを検索</a> ページに行き、友だちを探してみましょう!"
-  no followers found other: "%{username} さんはまだ誰にもフォローされていません"
-  no following found other: "%{username} さんはまだ誰もフォローしていません"
-  no likes found: "%{username} さんはまだお気に入りを登録していません。"
   no notes found: "%{username} さんのノートはありません"
   no recent activity: "%{username} さんの最近の利用履歴はありません"
   no badges found yourself: "まだバッジを獲得していません"
   no badges found other: "%{username} さんはまだバッジを獲得していません"
   see users badges: "%{username}' さんのバッジを見る"
-  followers: "フォロワー"
-  following: "フォローしている"
   bookmark: "ブックマーク"
   earned badge date: "%{username} さんが%{ago}前に獲得"
   badges title: "バッジ"
@@ -143,13 +130,6 @@ ja:
   or:
     lower: "または"
     upper: "または"
-  likes:
-    my likes: "わたしのお気に入り"
-    all likes: "全てのお気に入り"
-    none exist blurb: "申し訳ございません。ここにはお気に入りはありません。"
-    likes: "お気に入り"
-    like button text: "お気に入り"
-    unlike button text: "お気に入りを解除"
   notes:
     list title: "ノート"
     loading community: "コミュニティーのノートを読み込み中・・・"
@@ -177,9 +157,7 @@ ja:
     not found: "YouVersion では、ビデオ、音声、画象、文書や他のウェブサイトなどを聖句に関連付けることができます。神様の御言葉から何を学び、何を考えさせられたかをシェアすることで YouVersion コミュニティーに参加するひとつの方法です。さあ、聖書リーダの中から聖句を選び、ノートを記入してみましょう。とっても簡単です。"
     cancel: "キャンセル"
     pop out: "別ウィンドウで表示"
-    notes i like: "お気に入りノート"
     none found: "ノートが見つかりません..."
-    see my likes: "お気に入りを全部見る"
     successfully deleted: "ノートが削除されました"
   ref:
     loading secondary: "参照聖句を2つ目の聖書訳で読み込み中・・・"
@@ -206,8 +184,6 @@ ja:
   users:
     unverified heading: "あと少しで完了です!"
     unverified message: "登録が完了していないアカウントにサインインしようとされているようです。登録を完了させるための最後のステップは簡単！YouVersionから送られた確認メール内にあった照合用リンクをクリックするだけです。確認メールが見つからない場合は、スパム・フォルダをチェックしていただくか、または<a href='%{resend_path}'>確認メールを再送できますl</a>。"
-    not following you: "さんはあなたをフォローしていません。"
-    following you: "さんがあなたをフォローしています。"
     reset connection: "申し訳ありませんが、エラーが発生しました。一旦この連携を解除した後で、改めて提携させてください。"
     settings: "設定"
     no connection friends: "あなたの %{connection} 友達は、まだ YouVersion 上にはいないようです。"
@@ -223,15 +199,8 @@ ja:
     welcome to youversion: "YouVersion のコミュニティーへようこそ！"
     confirm email: "メールが送信されていますので、登録の確認のためメールに記載されたリンクをクリックして下さい。"
     sign up for an account: "YouVersion の無料アカウントを作成する"
-    follow: "フォローする"
-    follow user: "%{user} さんをフォローする"
-    unfollow: "フォローを解除する"
-    unfollow user: "フォロー解除"
-    following title: "フォローしている人たち"
-    user does not follow you: "%{user} さんはあなたをフォローしていません"
     recent activity: "最近の利用履歴"
     my recent_activity: "最近の利用履歴"
-    started following: "フォローを開始しました"
     subscribed to plan: "%{plan} に参加したユーザ"
     reading: "このプランに参加中のユーザ"
     subscribed previously: "%{time_ago} 前に開始しました"
@@ -262,8 +231,6 @@ ja:
     user friends: "%{user} さんの友だち"
     my bookmarks: "わたしのブックマーク"
     user bookmarks: "%{user} さんのブックマーク"
-    my likes: "わたしのお気に入り"
-    user likes: "%{user} さんのお気に入り"
     my badges: "マイ・バッジ"
     revised date: "最終更新日: %{date}"
     update email copy: "新しいメールアドレスを入力して、「メールアドレスを更新」をクリックしてください。新しいメールアドレスの確認リンクをメールで送信します。"
@@ -690,7 +657,7 @@ ja:
     home:
       hero:
         heading: "携帯、タブレット、PCから無料で使える聖書"
-        description: "YouVersionのシンプルで広告のない聖書アプリから、神様の御言葉を毎日の生活にお届けします。"
+        description: "YouVersion - シンプルで広告なしの聖書アプリ。神様の御言葉を日々の生活へお届けしています。"
         learn more: "以下をご参照ください"
         start reading: "読書を開始"
         skip in future: "今後はこのページを表示しない"
@@ -753,3 +720,6 @@ ja:
     public domain: "パブリックドメイン"
     loading: "さらに聖書訳を読み込み中・・・"
     load error: "申し訳ございませんが、聖書訳の読み込み中に問題が発生しました。このメニューを一旦閉じて、改めて開いてみてください。"
+  reader help:
+    title: "聖句を選択…"
+    line 1: "聖句にブックマークしたり、ノートを記録したり、お友達とシェアするには、ご希望の聖句（複数可）をクリックまたはタップしてください。"
