--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -35,8 +35,6 @@ ko:
   facebook: "페이스북"
   share success: "메시지가 공유되었습니다."
   share error: "메시지 공유 진행 중 오류가 발생했습니다. 다시 시도를 해주세요."
-  error following user: "죄송합니다.  원하시는 회원 팔로우에 오류가 발생하였습니다."
-  error unfollowing user: "죄송합니다.  원하시는 회원 팔로우 취소에 오류가 발생하였습니다."
   google plus: "구글 플러스"
   connect to: "회원님의 %{connection} 계정에 접속"
   connected as user: "%{connection} 에 %{username} 사용자명으로 접속되었습니다."
@@ -44,24 +42,13 @@ ko:
   deleted connection error: "죄송합니다.   %{connection} 접속을 취소하는데 오류가 발생했습니다."
   remove connection: "접속 취소"
   connection users: "%{connection} 에 접속된 YouVersion 사용자들입니다."
-  connection marketing: "친구들과 같이 YouVersion을 사용하면 더욱 즐겁습니다.  YouVersion 계정을 다른 소셜 네트워크 계정에 연동해서 YouVersion에 있는 다른 친구들을 찾거나 팔로우를 하세요.  여러분의 계정을 연동하시면, 몇번의 클릭으로 다른 친구들과 쉽게 나눌 수 있게 됩니다.  본인의 동의없이는 절대로 어떤 것도 포스트 하지 않습니다."
+  connection marketing: "친구들과 같이 YouVersion을 사용하면 더욱 즐겁습니다.  YouVersion 계정을 다른 소셜 네트워크 계정에 연동해서 YouVersion의 다른 친구들을 찾아보세요.  계정 연동을 통해서, 몇번의 클릭으로 다른 친구들과 쉽게 나눌 수 있게 됩니다.  본인의 동의없이는 절대로 어떤 것도 포스트 하지 않습니다."
   next step connections: "다음: 여러분의 계정을 연동하셔서 다른 친구들을 찾아보세요."
-  you are now following: "%{username}님을 팔로우 했습니다,"
-  you are no longer following: "더 이상 %{username}님을 팔로우 하지않습니다,"
-  user follows: "%{user}님은 회원님을 팔로우 합니다."
-  user does not follow: "%{user}님은 회원님을 팔로우 하지 않습니다."
-  no following found self: "회원님이 팔로우 하시는 분이 없습니다.  <a href='%{link}'>친구찾기</a>를 방문하여 친구를 찾아보세요!"
-  no followers found self: "아직 팔로우 하시는 분이 없습니다.  <a href='%{link}'>친구 찾기</a>를 방문하여 친구를 찾아보세요."
-  no followers found other: "%{username}님을 팔로우하는 분이 아직 없습니다."
-  no following found other: "%{username}님이 팔로우하는 분은 아직 없습니다."
-  no likes found: "%{username}님은 '좋아요'를 한 것이 없습니다."
   no notes found: "%{username}님은 작성하신 노트가 없습니다,."
   no recent activity: "%{username}님의 최근 활동이 없습니다."
   no badges found yourself: "아직 획득한 뱃지가 없습니다."
   no badges found other: "%{username}님은 아직 받은 배지가 없습니다."
   see users badges: "%{username}님이 받은 배지 보기"
-  followers: "팔로워"
-  following: "팔로윙"
   bookmark: "책갈피"
   earned badge date: "%{username}님이 %{ago} 전에 받음"
   badges title: "배지"
@@ -143,13 +130,6 @@ ko:
   or:
     lower: "또는"
     upper: "혹은"
-  likes:
-    my likes: "나의 좋아요"
-    all likes: "전체 좋아요"
-    none exist blurb: "죄송합니다. 좋아요가 없습니다"
-    likes: "좋아요"
-    like button text: "좋아요"
-    unlike button text: "좋아요 취소"
   notes:
     list title: "노트"
     loading community: "공동체 노트 로딩중 ..."
@@ -177,9 +157,7 @@ ko:
     not found: "성경 구절에 동영상, 오디오, 사진, 텍스트, 또는 다른 웹사이트를 연결할 수 있습니다.  말씀을 읽으면서 새롭게 배우거나 느낀 것들을 YouVersion 공동체 안의 다른 분들과 나눌  수 있는 방법입니다. 지금 읽고 계신 성경 구절을 선택하셔서 노트를 추가 해 보세요.  아주 쉽습니다."
     cancel: "취소"
     pop out: "다른 창에서 보기"
-    notes i like: "좋아요 해둔 노트"
     none found: "노트가 없습니다..."
-    see my likes: "좋아요 전체 보기"
     successfully deleted: "노트를 삭제했습니다."
   ref:
     loading secondary: "두번째 번역본에서 참고 구절을 로딩합니다."
@@ -206,8 +184,6 @@ ko:
   users:
     unverified heading: "거의 끝났습니다!"
     unverified message: "설정이 완전히 끝나지 않은 계정에 로그인을 하실려는 것 같군요.   YouVersion이 보낸  확인 이메일 내용 안에 있는 확인 절차  링크를 클릭하시면 됩니다.  메일을 찾을 수가 없으시면 스팸 폴더를 확인하시거나  <a href='%{resend_path}'>확인 이메일 재발송</a>을 클릭하세요."
-    not following you: "님은 회원님을 팔로윙 하지 않습니다."
-    following you: "님은 회원님을 팔로윙 하고 있습니다."
     reset connection: "죄송합니다.  오류가 발생했습니다.  다시 연결을 시도해주세요."
     settings: "설정"
     no connection friends: "%{connection} 친구들 중 YouVersion에 가입하시 분이 없습니다."
@@ -223,15 +199,8 @@ ko:
     welcome to youversion: "YouVersion 공동체에 오신 것을 환영합니다."
     confirm email: "이메일 수신을 확인 후 등록을 확인하기 위하여 링크를 클릭하세요."
     sign up for an account: "무료 YouVersion계정 만들기"
-    follow: "팔로우"
-    follow user: "%{user}님 팔로우 하기"
-    unfollow: "팔로우 취소"
-    unfollow user: "%{user} 팔로우 중지"
-    following title: "팔로윙하는 사람들"
-    user does not follow you: "%{user}님은 회원님을 팔로우하지 않습니다."
     recent activity: "최근활동"
     my recent_activity: "나의 최근 활동"
-    started following: "팔로우를 시작했습니다."
     subscribed to plan: "%{plan}에 등록하신 분들"
     reading: "이 계획을 읽고 계신 분들"
     subscribed previously: "%{time_ago}  전부터 시작함"
@@ -262,8 +231,6 @@ ko:
     user friends: "%{user}님 친구"
     my bookmarks: "책갈피"
     user bookmarks: "%{user}님 책갈피"
-    my likes: "내 좋아요"
-    user likes: "%{user}님의 좋아요"
     my badges: "내 배지"
     revised date: "%{date} 에 최정 수정됨"
     update email copy: "새 이메일 주소를 입력후 이메일 변경을 클릭하세요. 새 이메일 주소 확인을 위한 인증메일을 보내겠습니다."
@@ -437,7 +404,7 @@ ko:
     earned a badge: "배지 획득"
     user badges: "%{user}님의 배지"
   plans:
-    title: "성경 읽기계획"
+    title: "묵상"
     browse by category: "카테고리별 보기"
     browse plans: "%{category} 항목의 계획 보기"
     swap list localization: "(<a href='%{swap_link}'> %{swap_locale}에서 보기</a>)"
@@ -753,3 +720,6 @@ ko:
     public domain: "공개판"
     loading: "번역본 추가 로딩중 ..."
     load error: "번역본을 추가로 로딩하는 중 오류가 발생했습니다.  메뉴를 닫으신 후에 다시 시도를 해주세요."
+  reader help:
+    title: "구절 선택하기 ..."
+    line 1: "원하시는 구절을 클릭하거나 탭하시면 북마크, 하이라이트, 노트작성, 또는 다른 친구들과 공유하실 수있습니다."
