--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -35,8 +35,6 @@ mk:
   facebook: "Facebook"
   share success: "Ја сподели пораката."
   share error: "Имаше проблем при споделување на твојата порака. Обиди се повторно."
-  error following user: "Има грешка во следењето на тој корисник."
-  error unfollowing user: "Има грешка во прекинот на следење на тој корисник."
   google plus: "Google +"
   connect to: "Поврзување со твојот %{connection} профил"
   connected as user: "Поврзани сте со %{connection} како %{username}."
@@ -44,24 +42,13 @@ mk:
   deleted connection error: "Има грешка при прекинувањето на конекцијата со %{connection}."
   remove connection: "Отстрани"
   connection users: "Еве неколку YouVersion корисници со кои си поврзан на %{connection}."
-  connection marketing: "YouVersion е поинтересен кога се користи со пријателите! Поврзи го YouVersion профилот со другите социјални мрежи и инстантно најди ги и поврзи се со пријателите на YouVersion. Поврзувањето на профилите овозможува лесно да се делат податоци меѓусебно. Ништо не објавуваме без твое одобрение."
+  connection marketing: "YouVersion е позабавен со пријателите! Поврзете ја вашата YouVersion сметка со други социјални мрежи и веднаш најдете ги вашите пријатели на YouVersion. Тоа ќе ви овозможи да споделувате содржини само со два-три клика. Ние никогаш нема да објавиме било што без ваша согласност."
   next step connections: "Следно: поврзи ги профилите и најди ги твоите пријатели"
-  you are now following: "Сега го следиш %{username}"
-  you are no longer following: "Веќе не го следиш %{username}"
-  user follows: "%{user} те следи."
-  user does not follow: "%{user} не те следи."
-  no following found self: "Не следиш никого. Посети ја страната  <a href='%{link}'>Најди пријатели</a> и најди некои пријатели!"
-  no followers found self: "Не те следи никој. Посети ја страната <a href='%{link}'>Најди пријатели</a> и најди некои пријатели!"
-  no followers found other: "Се уште никој не го следи %{username}."
-  no following found other: "%{username} се уште не следи никого."
-  no likes found: "%{username} нема ништо означено дека му се допаѓа ."
   no notes found: "Корисникот %{username} нема никакви белешки."
   no recent activity: "%{username} нема никаква скорешна активност."
   no badges found yourself: "Немаш добиено ниту еден беџ."
   no badges found other: "Корисникот %{username} нема добиено ниту еден беџ."
   see users badges: "Погледни ги сите беџови на корисникот %{username}"
-  followers: "Следбеници"
-  following: "Следење"
   bookmark: "Бележник"
   earned badge date: "Добиен од %{username} пред %{ago} "
   badges title: "Беџови"
@@ -143,13 +130,6 @@ mk:
   or:
     lower: "или"
     upper: "ИЛИ"
-  likes:
-    my likes: "Моите допаѓања"
-    all likes: "Сите допаѓања"
-    none exist blurb: "За жал, тука нема допаѓања!"
-    likes: "Ми се допаѓа"
-    like button text: "Ми се допаѓа"
-    unlike button text: "Не ми се допаѓа"
   notes:
     list title: "Белешки"
     loading community: "Вчитување на белешките од заедницата..."
@@ -177,9 +157,7 @@ mk:
     not found: "YouVersion овозможува да го поврзеш било кој стих или стихови од Библијата со видео и аудио снимки, слики, текстови и линкови до други вебсајтови. Така можеш да станеш дел од YouVersion заедницата, споделувајќи што си научил од Библијата или пак твоите размислувања во врска со неа. Одбери стих (стихови) од Библијата и креирај нова белешка. Сосема е едноставно. "
     cancel: "Откажи"
     pop out: "Истави"
-    notes i like: "Белешки кои ми се допаѓаат"
     none found: "Не најдовме белешки..."
-    see my likes: "Види ги сите мои допаѓања "
     successfully deleted: "Белешката е отстранета"
   ref:
     loading secondary: "Вчитување референци за втората верзија..."
@@ -206,8 +184,6 @@ mk:
   users:
     unverified heading: "Скоро готово!"
     unverified message: "Изгледа се обидуваш да се логираш на сметка која не е креирана целосно.  Треба уште еден чекор: едноставно кликни на линкот за конфирмација во имејлот за потврда кој го прими од YouVersion. Не можеш да го најдеш? Провери во спам или\n<a href='%{resend_path}'>прати повторно мејл за потврда</a>."
-    not following you: "не те следи"
-    following you: "те следи"
     reset connection: "Грешка при конекцијата. Ве молиме отстранете и реконектирајте ја конекцијата."
     settings: "Уредувања"
     no connection friends: "Никој од твоите %{connection} пријатели не е на YouVersion."
@@ -223,15 +199,8 @@ mk:
     welcome to youversion: "Добредојде во заедницата на YouVersion!"
     confirm email: "Провери е-пошта и кликни на линкот што го пративме за потврдување на регистрацијата."
     sign up for an account: "Создадете бесплатен YouVersion профил"
-    follow: "Следи"
-    follow user: "Следи го/ја %{user}"
-    unfollow: "Не следи"
-    unfollow user: "Не го следи %{user}"
-    following title: "Луѓе кои ги следам"
-    user does not follow you: "%{user} не те следи."
     recent activity: "Скорешни активности"
     my recent_activity: "Моите скорешни активности"
-    started following: "Почна да ги следиш"
     subscribed to plan: "Корисници приклучени на %{plan}"
     reading: "Корисници кои го користат овој план"
     subscribed previously: "Почнато пред %{time_ago}"
@@ -262,8 +231,6 @@ mk:
     user friends: "Пријателите на %{user}"
     my bookmarks: "Моите обележувачи"
     user bookmarks: "Обележувачите на%{user}"
-    my likes: "Моите допаѓања"
-    user likes: "Допаѓањата на %{user}"
     my badges: "Моите беџеви"
     revised date: "Последно ажурирање на %{date}"
     update email copy: "Внеси нова е-адреса и кликни \"Ажурирај\". Ќе ти пратиме линк за да ја потврдиш новата е-адреса."
@@ -753,3 +720,6 @@ mk:
     public domain: "Јавен Domain"
     loading: "Се вчитуваат повеќе верзии..."
     load error: "Се извинуваме, има проблем со вчитување на повеќе верзии. Затворете го менито и обидете се повторно со отварање на истото."
+  reader help:
+    title: "Избери стих..."
+    line 1: "Кликни или допри на било кој стих или збир на стихови за да ги обележиш или нагласиш, да запишеш белешка, или да ја споделиш со твоите пријатели! "
