--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -1,6 +1,13 @@
 mn:
   api:
+    users confirm password matches: "Шинэ нууц үгүүд таахгүй байна."
+    users email email: "Энэ и-мэйл хаяг буруу байна."
+    users email email rfc: "Таны оруулсан и-мэйл хаяг буруу байна."
     users email not available: "Энэ и-мэйл бүртгэгдсэн байна"
+    users email not found: "Энэ и-мэйл хаягтай хэрэглэгч олдсонгүй. "
+    users email required: "И-мэйл хаягаа оруулах шаардлагатай."
+    users hash verified: "Энэ данс батлагдсан. "
+    users password change: "Таны шинэ нууц үгийг хуучин нууц үгээсээ ѳѳр байх шаардлагатай."
   now: "Одоо"
   celebrating 50MM: "50 Сая Апп суулгагдсан баяраа тэмдэглэж байна!"
   link: "Холбоос"
@@ -21,8 +28,6 @@ mn:
   facebook: "Facebook"
   share success: "Таны зурвас бусадтай хуваалцагдлаа."
   share error: "Уучлаарай, Таны зурвасыг бусадтай хуваалцах үед алдаа гарлаа. Та дахин оролдоно уу."
-  error following user: "Уучлаарай, энэ хэрэглэгчийг дагах үед алдаа гарлаа."
-  error unfollowing user: "Уучлаарай, энэ хэрэглэгчийг үл дагах үед алдаа гарлаа."
   google plus: "Google +"
   connect to: " Бүртгэлээ %{connection} тэй холбох "
   connected as user: "%{username} хэрэглэгчийн нэрээр %{connection} тэй холбогдсон байна."
@@ -30,24 +35,12 @@ mn:
   deleted connection error: "Уучлаарай, таны холболтыг %{connection} -с салгах үед алдаа гарлаа."
   remove connection: "Устгах "
   connection users: "YouVersion хэрэглэчтэй %{connection} ээр холбогтой"
-  connection marketing: "YouVersion нь найзуудаа нэмсэнээр илүү сонирхолтой! Өөрийн YouVersion-ий бүртгэлээ бусад интернет нөхөрлөлийн сүлжээнүүдтэй холбож YouVersion дээр буй найзуудаа дагах боломжтой. Ингэснээр өөрийн сэтгэгдэлийг цөөн үйлдэлийн тусламжтай хуваалцах боломжтой юм. Бид таны зөвшөөрөлгүйгээр юу ч нийтлэхгүй."
   next step connections: "Дараа нь: Данснуудаа холбоод найзуудаа олох"
-  you are now following: "Та одоо %{username} -г дагаж байна."
-  you are no longer following: "Та %{username}-г дагаагүй байна"
-  user follows: "%{user} таныг дагаж байна."
-  user does not follow: "%{user} таныг дагаагүй байна."
-  no following found self: "Та одоогоор хэнийг ч дагаагүй байна.  <a href='%{link}'>Найз Хайх</a>  хуудсаар зочилж найзуудаа олно уу!"
-  no followers found self: "Таныг одоогоор хэн нэгэн дагаагүй байна.  <a href='%{link}'>Найз Хайх</a>  хуудсаар зочилж найзуудаа олно уу!"
-  no followers found other: "Одоогоор %{user} -г хэн ч дагаагүй байна. "
-  no following found other: "%{username} одоогоор хэнийг ч дагаагүй байна."
-  no likes found: "%{username} -д одоогоор ямар нэгэн юм таалагдаагүй байна. "
   no notes found: "%{username} -д тэмдэглэл байхгүй."
   no recent activity: "%{username} -д сүүлийн үеийн үйл явдал байхгүй."
   no badges found yourself: "Та одоогоор ямар ч тэмдэгт цуглуулаагүй байна."
   no badges found other: "%{username}  одоогоор ямар ч тэмдэгт аваагүй байна."
   see users badges: "%{username} -н бүх авсан тэмдэгтүүдийг харах"
-  followers: "Намайг Дагагчид"
-  following: "Миний дагаж байгаа"
   bookmark: "Хавчуурга"
   earned badge date: "%{username} %{ago} өмнө авсан"
   badges title: "Тэмдэгтүүд"
@@ -129,13 +122,6 @@ mn:
   or:
     lower: "эсвэл"
     upper: "ЭСВЭЛ"
-  likes:
-    my likes: "Миний таалагдсан юмс"
-    all likes: "Бүгд Таалагдсан"
-    none exist blurb: "Уучлаарай, энэ хэсэгт таалагдсан зүйл алга!"
-    likes: "Таалагдсан юмс"
-    like button text: "Дуртай"
-    unlike button text: "Unlike"
   notes:
     list title: "Тэмдэглэлүүд"
     loading community: "Гишүүдийн тэмдэглэл ачааллаж байна..."
@@ -163,9 +149,7 @@ mn:
     not found: "YouVersion нь Библийн цуврал ишлэлүүд эсвэл ямар нэгэн ишлэлийг видео, аудио, зурагнууд болон тексттэй нэгтгэн бусад вэбсайтуудад холбохыг зөвшөөрдөг. Бурханы үгийг уншихдаа бодох болон сурч байгаа зүйлээ хуваалцсанаар та YouVersion-ий бүлд нэгдэж буй нэг арга зам юм.  Та одоо Библи уншигч дотроосоо ишлэл(үүд) сонгоод тэмдэглэл хийж эхлээрэй. Энэ нь ердөө ийм л хялбар."
     cancel: "Цуцлах"
     pop out: "Тэмдэглэл гаргах"
-    notes i like: "Надад Таалагдсан Тэмдэглэлүүд"
     none found: "Тэмдэглэл олдсонгүй..."
-    see my likes: "Миний Likes Үзэх"
     successfully deleted: "Тэмдэглэл Арилгагдлаа"
   ref:
     loading secondary: "Хоёрдагч Хувилбараар зааварчилгаа ачааллаж байна..."
@@ -192,8 +176,6 @@ mn:
   users:
     unverified heading: "Бараг Дуслаа!"
     unverified message: "Та бүтэн бүс данснд нэвтрэж байгаа юм шиг. Танд нэг л шат илүү байгаа: YouVersion-ээс авсан баталгаажуулах и-мэйлд байгаа хяналт линкнд дараарай. Олдсонгүй юу? Та спам и-мэйл шалгах уу эсвэл <a href='%{resend_path}'>баталгаахуулах и-мэйл дахин илгээх</a>."
-    not following you: "Таныг дагахгүй"
-    following you: "Таныг дагаж байна"
     reset connection: "Уучлаарай, алдаа заалаа. Дахин шинээр холболт хийнэ үү. "
     settings: "Тохиргоо "
     no connection friends: "Одоогоор таны %{connection} найзууд YouVersion-д бүртгэгдээгүй байна."
@@ -209,15 +191,8 @@ mn:
     welcome to youversion: "YouVersion-ий гэр бүлд тавтай морилно уу!"
     confirm email: "Та и-мэйлээ шалгаад, ирсэн холбоосон дээр дарж бүртгэлээ идэвхижүүлнэ үү. "
     sign up for an account: "YouVersion-д үнэгүй бүртгүүлэх"
-    follow: "Дагах"
-    follow user: "%{user} -г Дагах"
-    unfollow: "Үл дагах "
-    unfollow user: "%{user} Дагахгүй"
-    following title: "Миний Дагаж Байгаа Хүмүүс"
-    user does not follow you: "%{user} таныг дагаагүй байна."
     recent activity: "Сүүлийн Үйл Явдал"
     my recent_activity: "Ойрын Үйл Ажиллагаа"
-    started following: "Дагаж эхэлсэн"
     subscribed to plan: "Гишүүд %{plan} -д нэгдсэн"
     reading: " Энэ Тѳлѳвлгѳѳг Уншиж Байгаа Хэрэглэгчид"
     subscribed previously: "%{time_ago} өмнө эхэлсэн"
@@ -247,8 +222,6 @@ mn:
     user friends: "%{user}-н Найзууд"
     my bookmarks: "Миний Номны Хавчуургууд"
     user bookmarks: "%{user}-н Хавчуургууд"
-    my likes: "Миний Дуртай Юмс"
-    user likes: "%{user}-н Дуртай Юмс"
     my badges: "Миний Тэмдэгтүүд"
     revised date: "Сүүлд %{date} хянасан"
     update email copy: "Шинэ и-мэйл хаягаа оруулаад шинэчлэх товчлуурыг дарна уу. Шинэ и-мэйл хаягаар баталгаажуулах холбоосыг танд илгээх болно. "
