--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -35,8 +35,6 @@ nl:
   facebook: "Facebook"
   share success: "Je bericht is gedeeld."
   share error: "Sorry, er ging iets verkeerd tijdens het delen van je bericht. Probeer het nog eens."
-  error following user: "Sorry, er ging iets fout tijdens het volgen van die gebruiker."
-  error unfollowing user: "Sorry, er ging iets fout tijdens het ontvolgen van die gebruiker."
   google plus: "Google+"
   connect to: "Verbinden met je %{connection}-account"
   connected as user: "Je bent verbonden met %{connection} als %{username}."
@@ -44,24 +42,13 @@ nl:
   deleted connection error: "Sorry, er ging iets fout tijdens het verwijderen van je verbinding met %{connection}."
   remove connection: "Verwijderen"
   connection users: "Dit zijn enkele YouVersion-gebruikers waarmee je verbonden bent op %{connection}:"
-  connection marketing: "YouVersion is leuker met vrienden! Verbind je YouVersion-account met je andere sociale netwerken en vind en volg meteen je vrienden op YouVersion. Je kan met enkele klikken je data met elkaar delen na het verbinden van de accounts. We zullen nooit een bericht plaatsen zonder je toestemming."
+  connection marketing: "YouVersion is leuker met vrienden! Koppel je YouVersion account met je andere sociale netwerken en vind meteen je vrienden op YouVersion. Je kan met enkele klikken je data met elkaar delen als je de accounts aan elkaar koppelt. We zullen nooit iets posten zonder je toestemming."
   next step connections: "Hierna: Verbind je accounts en die van je vrienden met elkaar"
-  you are now following: "Je volgt nu %{username}"
-  you are no longer following: "Je volgt %{username} niet meer"
-  user follows: "%{user} volgt jou."
-  user does not follow: "%{user} volgt jou niet."
-  no following found self: "Je volgt nog niemand. Bezoek de <a href='%{link}'>Vrienden vinden</a>-pagina en vind een paar vrienden!"
-  no followers found self: "Er is nog niemand die jou volgt. Bezoek de <a href='%{link}'>Vrienden vinden</a>-pagina en vind een paar vrienden!"
-  no followers found other: "%{username} wordt nog niet gevolgd."
-  no following found other: "%{username} volgt nog niemand."
-  no likes found: "%{username} heeft nog niets leuk gevonden."
   no notes found: "%{username} heeft geen notities."
   no recent activity: "%{username} heeft geen recente activiteit."
   no badges found yourself: "Je hebt nog geen medaille verdiend."
   no badges found other: "%{username} heeft nog geen medaille verdiend."
   see users badges: "Alle medailles van %{username} bekijken"
-  followers: "Volgers"
-  following: "Volgenden"
   bookmark: "Bladwijzer"
   earned badge date: "Door %{username} verdiend %{ago} geleden"
   badges title: "Medailles"
@@ -143,13 +130,6 @@ nl:
   or:
     lower: "of"
     upper: "OF"
-  likes:
-    my likes: "Mijn 'Vind ik leuks'"
-    all likes: "Alle 'Vind ik leuks'"
-    none exist blurb: "Sorry, geen 'Vind ik leuks' hier!"
-    likes: "Vind ik leuks"
-    like button text: "Vind ik leuk"
-    unlike button text: "Vind ik niet meer leuk"
   notes:
     list title: "Notities"
     loading community: "Notities uit de gemeenschap worden geladen…"
@@ -177,9 +157,7 @@ nl:
     not found: "YouVersion geeft je de mogelijkheid om video, audio, foto's, tekst en links van andere websites aan een vers of verzen uit de Bijbel te koppelen. Zo draag je bij aan de YouVersion-gemeenschap door te delen wat je leert en denkt terwijl je bezig bent met Gods Woord. Ga aan de slag door een vers (verzen) in de Bijbel te selecteren en er je eigen notitie aan toe te voegen. Zo makkelijk is dat."
     cancel: "Annuleren"
     pop out: "Uitklappen"
-    notes i like: "Notities die ik leuk vind"
     none found: "Er zijn geen notities gevonden…"
-    see my likes: "Al mijn 'Vind ik leuks' bekijken"
     successfully deleted: "Notitie verwijderd"
   ref:
     loading secondary: "Verwijzingen in tweede vertaling aan het laden…"
@@ -206,8 +184,6 @@ nl:
   users:
     unverified heading: "Bijna klaar!"
     unverified message: "Het lijkt erop dat je probeert om je in te loggen op een account dat nog niet volledig is ingesteld. Je hoeft nog maar één stap te voltooien: klikken op de bevestigingslink in de bevestigingse-mail die je van YouVersion hebt ontvangen. Kan je deze e-mail niet vinden? Controleer dan je spammap  of <a href='%{resend_path}'>ontvang een nieuwe bevestigingse-mail</a>."
-    not following you: "Volgt jou niet"
-    following you: "Volgt jou"
     reset connection: "Sorry, er is iets mis gegaan. Gelieve de verbinding te verwijderen en opnieuw te verbinden."
     settings: "Instellingen"
     no connection friends: "Geen van je %{connection}-vrienden lijkt YouVersion te gebruiken."
@@ -223,15 +199,8 @@ nl:
     welcome to youversion: "Welkom bij de YouVersion-gemeenschap!"
     confirm email: "Controleer je e-mail en klik op de link om je registratie te bevestigen."
     sign up for an account: "Een gratis YouVersion-account aanmaken"
-    follow: "Volgen"
-    follow user: "%{user} volgen"
-    unfollow: "Ontvolgen"
-    unfollow user: "Ontvolg %{user}"
-    following title: "Mensen die ik volg"
-    user does not follow you: "%{user} volgt je niet"
     recent activity: "Recente activiteit"
     my recent_activity: "Mijn recente activiteit"
-    started following: "Begonnen met volgen"
     subscribed to plan: "Gebruikers die begonnen zijn aan het %{plan}"
     reading: "Gebruikers die dit leesplan lezen"
     subscribed previously: "%{time_ago} geleden begonnen"
@@ -262,8 +231,6 @@ nl:
     user friends: "Vrienden van %{user}"
     my bookmarks: "Mijn bladwijzers"
     user bookmarks: "Bladwijzers van %{user}"
-    my likes: "Mijn 'Vind ik leuks'"
-    user likes: "'Vind ik leuks' van %{user}"
     my badges: "Mijn medailles"
     revised date: "Voor het laatst herzien op %{date}"
     update email copy: "Voer een nieuw e-mailadres in en klik op E-mailadres bijwerken. We sturen je een link om je nieuwe e-mailadres te bevestigen."
@@ -753,3 +720,6 @@ nl:
     public domain: "Publiek domein"
     loading: "Meer Versies aan het laden..."
     load error: "Sorry, er ontstond een probleem bij het laden van meer versies. Sluit dit menu en heropen het om het opnieuw te proberen."
+  reader help:
+    title: "Selecteer een vers..."
+    line 1: "Klik of raak een vers of verzen aan om een bladwijzer, makering, een notitie aan te maken, of deel ze met je vrienden!"
