--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -35,8 +35,6 @@
   facebook: "Facebook"
   share success: "Meldingen din har blitt delt."
   share error: "Det skjedde en feil ved deling av meldingen din. Vennligst prøv igjen."
-  error following user: "Beklager, en feil oppstod da du forsøkte å følge brukeren."
-  error unfollowing user: "Beklager, en feil oppstod da du forsøkte å slutte å følge brukeren."
   google plus: "Google +"
   connect to: "Koble til din %{connection} konto"
   connected as user: "Du er koblet til %{connection} som %{username}."
@@ -44,24 +42,13 @@
   deleted connection error: "En feil oppstod da du forsøkte å ta bort koblingen til %{connection}."
   remove connection: "Fjern"
   connection users: "Her er noen YouVersion-brukere du er koblet til på %{connection}:"
-  connection marketing: "YouVersion er mer moro med venner! Lenk din YouVersion-konto til andre sosiale nettverk, finn og følg øyeblikkelig dine venner på YouVersion. Å lenke dine kontoer gjør det også mulig å dele innhold ved hjelp av noen få klikk. Vi vil aldri poste noe uten din godkjennelse."
+  connection marketing: "YouVersion er mer underholdende sammen med venner. Kople sammen din YouVersion-konto med sosiale nettverk og finn umiddelbart dine venner på YouVersion. Å kople sammen kontoene dine, gjor det enkelt å dele innhold med noen få klikk. Vi vil aldri poste noe uten din godkjenning."
   next step connections: "Neste: Lenk dine kontoer og finn vennene dine"
-  you are now following: "Du følger nå %{username}"
-  you are no longer following: "Du følger ikke lenger %{username}"
-  user follows: "%{user] følger deg."
-  user does not follow: "%{user} følger ikke deg."
-  no following found self: "Du følger ikke noen ennå. Besøk siden <a href='%{link}'>Finn venner</a> og finn noen venner!"
-  no followers found self: "Du har ingen følgere ennå. Besøk siden <a href='%{link}'>Finn venner</a> og finn noen venner!"
-  no followers found other: "Ingen følger %{username} ennå."
-  no following found other: "%{username} følger ikke noen ennå."
-  no likes found: "%{username} har ikke likt noe ennå."
   no notes found: "%{username} har ingen notater."
   no recent activity: "%{username} har ingen nylig aktivitet."
   no badges found yourself: "Du har ikke fått noen merker ennå."
   no badges found other: "%{username} har ikke fått noen merker ennå."
   see users badges: "Se alle merkene til %{username}"
-  followers: "Følgere"
-  following: "Følger"
   bookmark: "Bokmerke"
   earned badge date: "Oppnådd av %{username} for %{ago} siden"
   badges title: "Merker"
@@ -143,13 +130,6 @@
   or:
     lower: "eller"
     upper: "ELLER"
-  likes:
-    my likes: "Mine \"liker\""
-    all likes: "Alle \"liker\""
-    none exist blurb: "Beklager, ingen \"liker\" her!"
-    likes: "Liker"
-    like button text: "Lik"
-    unlike button text: "Ikke lik"
   notes:
     list title: "Notater"
     loading community: "Laster fellesnotater..."
@@ -177,9 +157,7 @@
     not found: "Hos YouVersion kan du relatere video, lyd, bilder, tekst og lenker til andre nettsider med hvilke som helst vers i Bibelen. Å dele det du lærer og tenker når du leser Skriften, er en måte å delta i YouVersion-fellesskapet på. Kom i gang nå ved å velge ett eller flere vers i bibelleseren og legge til ditt notat. Så enkelt er det."
     cancel: "Avbryt"
     pop out: "Åpne i eget vindu"
-    notes i like: "Notater jeg liker"
     none found: "Ingen notater funnet..."
-    see my likes: "Se alt jeg liker"
     successfully deleted: "Notat slettet"
   ref:
     loading secondary: "Laster referanser i sekundær oversettelse..."
@@ -206,8 +184,6 @@
   users:
     unverified heading: "Nesten fullført!"
     unverified message: "Det ser ut til at du prøver å logge inn med en brukerkonto som ikke har fullført registreringen. Du har kun ett steg igjen: Trykk på lenken i e-post fra YouVersion for å bekrefte kontoen. Kan du ikke finne den? Se i mappe for søppelpost eller <a href='%{resend_path}'>send e-post på nytt</a>."
-    not following you: "Følger deg ikke"
-    following you: "Følger deg"
     reset connection: "Noe gikk galt. Kople fra for så å kople til igjen."
     settings: "Innstillinger"
     no connection friends: "Ingen av dine %{connection} venner ser ut til å være på YouVersion enda."
@@ -223,15 +199,8 @@
     welcome to youversion: "Velkommen til YouVersion-fellesskapet!"
     confirm email: "Vennligst sjekk e-posten din og klikk på lenken for å bekrefte registreringen din."
     sign up for an account: "Opprett en gratis YouVersion-konto"
-    follow: "Følg"
-    follow user: "Følg %{user}"
-    unfollow: "Slutt å følge"
-    unfollow user: "Slutt å følge  %{user}"
-    following title: "Folk jeg følger"
-    user does not follow you: "%{user} følger ikke deg."
     recent activity: "Nylig aktivitet"
     my recent_activity: "Min nylige aktivitet"
-    started following: "Startet å følge"
     subscribed to plan: "Brukere abonnerte på %{plan}"
     reading: "Brukere som leser denne planen"
     subscribed previously: "Startet for %{time_ago} siden"
@@ -262,8 +231,6 @@
     user friends: "%{user}s venner"
     my bookmarks: "Mine bokmerker"
     user bookmarks: "%{user}s bokmerker"
-    my likes: "Mine 'liker'"
-    user likes: "%{user}s 'liker'"
     my badges: "Mine merker"
     revised date: "Sist endret den %{date}"
     update email copy: "Skriv inn en ny epost-adresse og klikk på Oppdater epost. Vi sender deg så en lenke for å bekrefte din nye epost-adresse."
@@ -753,3 +720,6 @@
     public domain: "Offentlig område"
     loading: "Laster inn flere oversettelser..."
     load error: "Et problem oppstod i forbindelse med nedlastning av flere oversettelser. Lukk denne menyen og åpne på nytt for å prøve igjen."
+  reader help:
+    title: "Velg et vers..."
+    line 1: "Klikk på ett eller flere vers for å opprette bokmerke, utheve tekst, lage et notat eller dele med dine venner!"
