--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -35,8 +35,6 @@ pt-BR:
   facebook: "Facebook"
   share success: "Sua mensagem foi compartilhada."
   share error: "Desculpe, houve um erro ao compartilhar a sua mensagem. Por favor, tente novamente."
-  error following user: "Desculpe, houve um erro ao seguir esse usuário."
-  error unfollowing user: "Desculpe, houve um erro ao deixar de seguir esse usuário."
   google plus: "Google +"
   connect to: "Conectar à sua %{connection} conta"
   connected as user: "Você está conectado a %{connection} como %{username}."
@@ -44,24 +42,13 @@ pt-BR:
   deleted connection error: "Desculpe, houve um erro ao remover a sua conexão %{connection}."
   remove connection: "Remover"
   connection users: "Aqui estão alguns usuários YouVersion aos quais você está conectado %{connection}:"
-  connection marketing: "YouVersion é mais divertido com os amigos! Vincule a sua conta YouVersion as suas outras redes sociais e instantaneamente ache e siga os seus amigos no YouVersion. Vincular suas contas também permite que você compartilhe conteúdo com apenas alguns cliques. Nunca postaremos coisa alguma sem a sua aprovação."
+  connection marketing: "O YouVersion fica mais divertido com amigos! Conecte sua conta YouVersion a outras mídias sociais e encontre seus amigos no YouVersion instantanemente. Conectando suas contas também o permite compartilhar conteúdo com apenas alguns cliques. Nós nunca iremos postar nada sem a sua aprovação. "
   next step connections: "Próximo: Vincule suas contas e ache os seus amigos"
-  you are now following: "Agora você está seguindo %{username}"
-  you are no longer following: "Você não está mais seguindo %{username}"
-  user follows: "%{user} está seguindo você."
-  user does not follow: "%{user} não segue você."
-  no following found self: "Você ainda não está seguindo ninguém. Visite a página <a href='%{link}'>Achar Amigos</a> e ache alguns amigos!"
-  no followers found self: "Você ainda não tem nenhum seguidor. Visite a página <a href='%{link}'>Achar Amigos</a> e encontre alguns amigos!"
-  no followers found other: "Ninguém está seguindo %{username} ainda."
-  no following found other: "%{username} ainda não está seguindo ninguém."
-  no likes found: "%{username} ainda não curtiu nada."
   no notes found: "%{username} não tem nenhuma anotação."
   no recent activity: "%{username} não tem nenhuma atividade recente."
   no badges found yourself: "Você ainda não ganhou nenhuma medalha."
   no badges found other: "%{username} ainda não ganhou nenhuma medalha."
   see users badges: "Ver todas as medalhas de %{username}"
-  followers: "Seguidores"
-  following: "Seguindo"
   bookmark: "Marcador"
   earned badge date: "Ganha por %{username} há %{ago} atrás"
   badges title: "Medalhas"
@@ -143,13 +130,6 @@ pt-BR:
   or:
     lower: "ou"
     upper: "OU"
-  likes:
-    my likes: "Eu Curto"
-    all likes: "Tudo o que Curto"
-    none exist blurb: "Desculpe, nada foi curtido aqui!"
-    likes: "Curte"
-    like button text: "Curtir"
-    unlike button text: "Desfazer curtir"
   notes:
     list title: "Anotações"
     loading community: "Carregando anotações da comunidade..."
@@ -177,9 +157,7 @@ pt-BR:
     not found: "YouVersion permite que você associe vídeo, áudio, imagens, texto e links com outros sites com qualquer versículo ou uma série de versículos da Bíblia. É uma maneira de participar da comunidade YouVersion compartilhando o que você está aprendendo e pensando enquanto você se envolve com as Escrituras. Comece agora a selecionar versículo(s) no leitor da Bíblia e adicionar sua anotação. É fácil assim."
     cancel: "Cancelar"
     pop out: "Relocar"
-    notes i like: "Anotações que Curti"
     none found: "Nenhuma anotação encontrada..."
-    see my likes: "Ver Tudo que Curti"
     successfully deleted: "Anotação removida"
   ref:
     loading secondary: "Carregando Referência em Versão Secundária..."
@@ -206,8 +184,6 @@ pt-BR:
   users:
     unverified heading: "Quase Pronto!"
     unverified message: "Parece que você está tentando entrar em uma conta que ainda não foi completamente estabelecida. Você tem mais uma etapa: simplesmente clique no link de verificação no e-mail que você recebeu do YouVersion. Não encontrou o e-mail? Cheque sua caixa de spam ou <a href='%{resend_path}'>reenvie e e-mail de confirmação</a>. "
-    not following you: "Não está seguindo você "
-    following you: "Está seguindo você"
     reset connection: "Desculpe, ocorreu um erro. Por favor desconecte a conexão e tente novamente. "
     settings: "Configurações"
     no connection friends: "Nenhum dos seus amigos do %{connection} parecem fazer parte do YouVersion ainda."
@@ -223,15 +199,8 @@ pt-BR:
     welcome to youversion: "Bem-Vindo a comunidade YouVersion!"
     confirm email: "Por favor, verifique seu e-mail e clique no link para confirmar sua inscrição."
     sign up for an account: "Criar uma Conta Gratuita no YouVersion"
-    follow: "Seguir"
-    follow user: "Seguir %{user}"
-    unfollow: "Deixar de seguir"
-    unfollow user: "Deixar de seguir %{usuário} "
-    following title: "Pessoas que estou seguindo"
-    user does not follow you: "%{user} não está te seguindo."
     recent activity: "Atividade Recente"
     my recent_activity: "Minhas Atividades Recentes"
-    started following: "Começou a Seguir"
     subscribed to plan: "Usuários Inscritos no %{plan}"
     reading: "Usuários Lendo Esse Plano"
     subscribed previously: "Começou %{time_ago} atrás"
@@ -262,8 +231,6 @@ pt-BR:
     user friends: "Amigos de %{user}"
     my bookmarks: "Meus Marcadores"
     user bookmarks: "Marcadores de %{user}"
-    my likes: "Eu Curto"
-    user likes: "%{user} Curte"
     my badges: "Minhas Medalhas"
     revised date: "Revisado em %{date}"
     update email copy: "Insira um novo endereço de e-mail e clique em Atualizar E-mail. Enviaremos um link para que você confirme o seu novo endereço de e-mail."
@@ -614,8 +581,8 @@ pt-BR:
     creation form errors: "O(s) seguinte(s) erro(s) impediu(ram) que você completasse sua doação: "
   download ad:
     title: "Download  do App gratuito da Bíblia"
-    line 1: "Centenas de versões em mais de 100"
-    line 2: "idiomas - a Bíblia que"
+    line 1: "Centenas de versões em mais"
+    line 2: "de 100 idiomas - a Bíblia que"
     line 3: "vai com você a qualquer lugar."
     download: "Baixar Agora"
   about page:
@@ -753,3 +720,6 @@ pt-BR:
     public domain: "Domínio Público"
     loading: "Carregando Mais Versões..."
     load error: "Desculpe, houve um problema ao carregar mais versões. Feche este menu e reabra para tentar novamente. "
+  reader help:
+    title: "Selecione um versículo..."
+    line 1: "Clique em qualquer versículo ou conjunto de versículos para marcar, destacar, criar uma anotação ou compartilhar com amigos! "
