--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -35,8 +35,6 @@ pt-PT:
   facebook: "Facebook"
   share success: "A sua mensagem foi partilhada."
   share error: "Desculpe, aconteceu um erro a partilhar a sua mensagem. Por favor tente novamente."
-  error following user: "Desculpe, houve um erro ao fazer Seguir este utilizador."
-  error unfollowing user: "Desculpe, houve um erro ao fazer Deixar de Seguir este utilizador."
   google plus: "Google +"
   connect to: "A associar à sua conta %{connection} "
   connected as user: "Você está associado a %{connection} como %{username}."
@@ -44,24 +42,13 @@ pt-PT:
   deleted connection error: "Desculpe, houve um erro ao remover a sua associação a %{connection}."
   remove connection: "Remover"
   connection users: "Aqui estão alguns utilizadores do YouVersion aos quais está ligado em %{connection}:"
-  connection marketing: "YouVersion é mais divertido com amigos! Ligue a sua conta YouVersion às suas redes sociais e instantaneamente encontre e siga os seus amigos no YouVersion. Ligar as suas contas também permite compartilhar conteúdo em apenas alguns cliques. Nunca iremos publicar alguma coisa sem a sua aprovação."
+  connection marketing: "O YouVersion é mais divertido com amigos! Ligue a sua conta YouVersion às suas outras redes sociais e encontre instantaneamente os seus amigos no YouVersion. Ligar as suas contas também permite partilhar conteúdo em apenas alguns cliques. Nunca iremos publicar alguma coisa sem a sua aprovação."
   next step connections: "Seguinte: Ligue as suas contas e encontre os seus amigos"
-  you are now following: "Está agora a seguir %{username}"
-  you are no longer following: "Já não está a seguir %{username}"
-  user follows: "%{user} está a segui-lo"
-  user does not follow: "%{user} não o segue."
-  no following found self: "Ainda não está a seguir ninguém. Visite a página <a href='%{link}'>Encontrar Amigos</a> e encontre alguns amigos!"
-  no followers found self: "Ainda não tem seguidores. Visite a página <a href='%{link}'>Encontrar Amigos</a> e encontre alguns amigos!"
-  no followers found other: "Ainda ninguém segue %{username}."
-  no following found other: "%{username} ainda não segue ninguém."
-  no likes found: "%{username} ainda não fez Gosto a nada."
   no notes found: "%{username} não tem notas criadas."
   no recent activity: "%{username} não tem atividade recente."
   no badges found yourself: "Ainda não ganhou nenhuma medalha."
   no badges found other: "%{username} ainda não ganhou qualquer medalha."
   see users badges: "Veja todas as medalhas de %{username}"
-  followers: "Seguidores"
-  following: "Seguindo"
   bookmark: "Marcador"
   earned badge date: "Ganha por %{username} há %{ago}"
   badges title: "Medalhas"
@@ -74,7 +61,7 @@ pt-PT:
   my connections: "Contas Associadas"
   my devices: "Dispositivos Associados"
   language name: "Português (Portugal)"
-  sign up: "Registe-se"
+  sign up: "Registar-se"
   have an account: "Já possui uma conta?"
   no account: "Não possui uma conta?"
   successful sign-in: "Autenticado como %{user}!"
@@ -143,17 +130,10 @@ pt-PT:
   or:
     lower: "ou"
     upper: "OU"
-  likes:
-    my likes: "Os meus Gosto´s"
-    all likes: "Todos os Gosto´s"
-    none exist blurb: "Desculpe, ninguém fez Gosto a isto!"
-    likes: "Gosto´s"
-    like button text: "Gosto"
-    unlike button text: "Remover Gosto"
   notes:
     list title: "Notas"
     loading community: "A carregar as notas da comunidade..."
-    no community notes: "Não existem notas da comunidade referentes aos versos selecionados. Para criar uma nota, escolha um verso no leitor da Bíblia e depois clique no botão Selecionado no topo do leitor."
+    no community notes: "Não existem notas da comunidade referentes aos versículos selecionados. Para criar uma nota, escolha um versículo no leitor da Bíblia e depois clique no botão Selecionado no topo do leitor."
     public: "Público"
     private: "Privado"
     is private: "A nota pretendida é privada."
@@ -174,16 +154,14 @@ pt-PT:
     delete: "Apagar Esta Nota"
     confirm delete: "Sim, tenho a certeza"
     write new: "Escrever Uma Nova Nota"
-    not found: "YouVersion permite-lhe associar vídeo, áudio, imagens, texto e links para outros sites com qualquer verso ou conjunto de versos da Bíblia. É uma forma de participar na comunidade YouVersion compartilhando o que está a aprender e a refletir, à medida que se envolve com as Escrituras. Comece agora mesmo selecionando um/uns versículo(s) no leitor da Bíblia e adicione a sua nota. É muito fácil."
+    not found: "YouVersion permite-lhe associar vídeo, áudio, imagens, texto e links para outros sites com qualquer versículo ou conjunto de versículos da Bíblia. É uma forma de participar na comunidade YouVersion partilhando o que está a aprender e a refletir, à medida que se envolve com as Escrituras. Comece agora mesmo selecionando um/uns versículo(s) no leitor da Bíblia e adicione a sua nota. É muito fácil."
     cancel: "Cancelar"
     pop out: "Saltar fora"
-    notes i like: "Notas que Gosto"
     none found: "Nenhuma nota encontrada..."
-    see my likes: "Ver Todos os Meus Gosto´s"
     successfully deleted: "Nota Removida"
   ref:
     loading secondary: "A Carregar a Referência na Versão Secundária..."
-    clear verses: "Limpar Versos Selecionados"
+    clear verses: "Limpar Versículos Selecionados"
     choose book and chapter: "Escolha o Livro + Capítulo"
     choose version: "Escolha a versão"
     choose second version: "Escolher Versão Secundária"
@@ -206,8 +184,6 @@ pt-PT:
   users:
     unverified heading: "Quase Terminado!"
     unverified message: "Parece que está a tentar autenticar-se com uma conta cujo processo de configuração não foi terminado. Precisa de cumprir mais um passo: clique simplesmente no link de verificação presente no email de confirmação enviado pelo YouVersion. Não o consegue localizar? Verifique a sua pasta de spam ou <a href='%{resend_path}'>reenvie o email de confirmação</a>."
-    not following you: "não está a segui-lo(a)"
-    following you: "está a segui-lo(a)"
     reset connection: "Desculpe, ocorreu um erro. Por favor remova e volte a efetuar esta associação."
     settings: "Definições"
     no connection friends: "Ainda nenhum dos seus amigos %{connection} aparenta estar a usar o YouVersion."
@@ -223,15 +199,8 @@ pt-PT:
     welcome to youversion: "Bem-vindo à comunidade YouVersion!"
     confirm email: "Por favor, verifique o seu email e clique no link para confirmar o seu registo."
     sign up for an account: "Crie uma Conta YouVersion Grátis"
-    follow: "Seguir"
-    follow user: "Siga %{user}"
-    unfollow: "Deixar de Seguir"
-    unfollow user: "Deixar de seguir %{user}"
-    following title: "Pessoas Que Sigo"
-    user does not follow you: "%{user} não o segue."
     recent activity: "Atividade Recente"
     my recent_activity: "Minhas Atividades Recentes"
-    started following: "Começou a Seguir"
     subscribed to plan: "Utilizadores que subscreveram %{plan}"
     reading: "Utilizadores a Ler este Plano"
     subscribed previously: "Iniciado há %{time_ago}"
@@ -251,7 +220,7 @@ pt-PT:
     edit account_existence: "Apagar Conta"
     delete account button: "Apagar a Minha Conta YouVersion"
     no devices: "Não tem dispositivos associados à sua Conta YouVersion"
-    no devices download copy: "Baseada na Bíblia online, YouVersion.com, a App da Bíblia é uma Bíblia online gratuita que pode ser instalada em praticamente todos os smartphones. A App da Bíblia permite aos utilizadores lerem a Bíblia, partilhar versos nas suas redes sociais, marcar as suas passagens favoritas e mais&mdash;tudo num formato que acompanha um estilo de vida cada vez mais móvel. Visite <a href='http://www.youversion.com/download'>youversion.com/download</a> a partir dos seu dispositivo móvel para descarregar a App da Bíblia e associar à sua conta!"
+    no devices download copy: "Baseada na Bíblia online, YouVersion.com, a App da Bíblia é uma Bíblia online gratuita que pode ser instalada em praticamente todos os smartphones. A App da Bíblia permite aos utilizadores lerem a Bíblia, partilhar versículos nas suas redes sociais, marcar as suas passagens favoritas e mais&mdash;tudo num formato que acompanha um estilo de vida cada vez mais móvel. Visite <a href='https://www.bible.com/download'>youversion.com/download</a> a partir dos seu dispositivo móvel para descarregar a App da Bíblia e associar à sua conta!"
     yes delete: "Sim, Apagar a Minha Conta"
     account delete success: "A sua conta YouVersion foi apagada com sucesso. Esperamos que continue a encontrar formas significativas de interação com a Bíblia. Algumas destas apps podem ajudar no seu progresso: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Se apagar a sua conta, irá apagar de forma permanente toda a sua informação, história e personalização (como notas, marcadores, destaques, etc) no YouVersion.com e na App da Bíblia. Esta ação não pode ser revertida por si ou pela nossa equipe. Se tem a certeza que deseja continuar, prossiga abaixo."
@@ -262,8 +231,6 @@ pt-PT:
     user friends: "Amigos de %{user}"
     my bookmarks: "Os Meus Marcadores"
     user bookmarks: "Marcadores de %{user}"
-    my likes: "Os Meus Gosto´s"
-    user likes: "Gosto´s de %{user}"
     my badges: "As Minhas Medalhas"
     revised date: "Última revisão em %{date}"
     update email copy: "Introduza um novo endereço de email e clique em Atualizar Email. Iremos enviar-lhe um link para confirmar o seu novo endereço de email."
@@ -417,7 +384,7 @@ pt-PT:
     all: "Todos"
     labels label: "Etiquetas:"
     title: "Marcadores"
-    not found: "Marcadores dão-lhe um guia de referência rápido para as suas passagens favoritas ou para o último capítulo lido num dos livros da Bíblia. Para adicionar um marcador, selecione um verso no leitor da Bíblia e depois clique o botão Selecionado no topo do leitor."
+    not found: "Marcadores dão-lhe um guia de referência rápido para as suas passagens favoritas ou para o último capítulo lido num dos livros da Bíblia. Para adicionar um marcador, selecione um versículo no leitor da Bíblia e depois clique o botão Selecionado no topo do leitor."
     other user not found: "%{username} ainda não guardou nenhum marcador."
     creation form errors: "O(s) seguinte(s) erro(s) não permite(m) a criação do seu marcador:"
     successfully created: "Marcador Adicionado"
@@ -566,10 +533,10 @@ pt-PT:
     benefits title: "Tenha a Experiência Completa"
     benefits blurb: "Criar uma conta YouVersion dá-lhe acesso a mais funcionalidades tais como marcadores e notas. Estas aparecerão no seu dispositivo quando se autenticar. Uma conta também torna mais fácil partilhar a Bíblia com os seus amigos, por isso perca um minuto ou dois e registe-se!"
     plan blurb: "Parece que deseja iniciar um Plano de Leitura. Ótimo! Planos ajudam-no a fazer da Bíblia uma parte integrante do seu dia-a-dia. Autentique-se ou crie uma conta em baixo para começar!"
-    bookmark blurb: "Parece que deseja usar um marcador. Excelente! Marcadores ajudam-no a manter um registo de versos que pretende memorizar, partilhar ou marcar como favoritos. Autentique-se ou crie uma conta em baixo para começar!"
+    bookmark blurb: "Parece que deseja usar um marcador. Excelente! Marcadores ajudam-no a manter um registo de versículos que pretende memorizar, partilhar ou marcar como favoritos. Autentique-se ou crie uma conta em baixo para começar!"
     friends blurb: "Parece que deseja interagir com Amigos. Grande Ideia! Terá a possibilidade de partilhar os seus novos conhecimentos e ajudar outros a cumprirem as suas metas de leitura. Autentique-se ou crie uma conta em baixo para começar!"
     share blurb: "Parece que quer partilhar as Escrituras. Ótimo! Poderá partilhar as Escrituras através do Facebook ou Twitter. Entre ou crie uma conta em baixo para começar!"
-    highlight blurb: "Parece que pretende destacar texto das escrituras. Ótimo! Destaques ajudam a organizar e manter ordenados os seus versos favoritos. Autentique-se ou crie uma conta em baixo e comece já!"
+    highlight blurb: "Parece que pretende destacar texto das escrituras. Ótimo! Destaques ajudam a organizar e manter ordenados os seus versículos favoritos. Autentique-se ou crie uma conta em baixo e comece já!"
     note blurb: "Parece que pretende criar uma nota sobre um texto das escrituras. Boa ideia! Notas ajudam a lembrar e organizar a verdade que descobre na Palavra de Deus. Autentique-se ou crie uma conta em baixo e comece já!"
   audio:
     none: "Desculpe, mas o áudio não está disponível nesta versão."
@@ -641,7 +608,7 @@ pt-PT:
     facebook: "YouVersion no Facebook"
     twitter: "YouVersion no Twitter"
     support: "Necessita de ajuda no YouVersion?"
-    lead copy: "Baseada na Bíblia online, YouVersion.com, a App da Bíblia é uma Bíblia online gratuita que pode ser instalada em praticamente todos os smartphones. A App da Bíblia permite aos utilizadores lerem a Bíblia, partilhar versos nas suas redes sociais, marcar as suas passagens favoritas e mais&mdash;tudo num formato que acompanha um estilo de vida cada vez mais móvel."
+    lead copy: "Baseada na Bíblia online, YouVersion.com, a App da Bíblia é uma Bíblia online gratuita que pode ser instalada em praticamente todos os smartphones. A App da Bíblia permite aos utilizadores lerem a Bíblia, partilhar versículos nas suas redes sociais, marcar as suas passagens favoritas e mais&mdash;tudo num formato que acompanha um estilo de vida cada vez mais móvel."
     resources title: "Recursos para Imprensa"
     now title: "Hoje na Comunidade YouVersion"
     resources:
@@ -693,7 +660,7 @@ pt-PT:
         description: "A YouVersion é uma Bíblia simples, sem publicidade, que traz a Palavra de Deus à sua vida diária."
         learn more: "saber mais"
         start reading: "Começar a ler"
-        skip in future: "No futuro, saltar esta página"
+        skip in future: "No futuro saltar esta página"
         now skipped: "Não acederá mais a esta página "
       features:
         read heading: "Leia a Bíblia."
@@ -753,3 +720,6 @@ pt-PT:
     public domain: "Domínio Público"
     loading: "Descarregando mais versões ..."
     load error: "Desculpe, houve um problema ao descarregar mais versões. Feche este menu e tente novamente."
+  reader help:
+    title: "Selecione um versículo..."
+    line 1: "Clique ou toque em qualquer versículo ou grupo de versículos para colocar um marcador, destacar, criar uma nota, ou partilhar com os seus amigos!"
