--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -35,8 +35,6 @@ ru:
   facebook: "Facebook"
   share success: "Ваше сообщение было опубликовано."
   share error: "Извините, при публикации Вашего сообщения произошла ошибка. Пожалуйста, попробуйте ещё раз."
-  error following user: "Извините, при попытке добавления этого пользователя в друзья возникла ошибка."
-  error unfollowing user: "Извините, при попытке удаления этого пользователя из друзей возникла ошибка."
   google plus: "Google+"
   connect to: "Подключить Ваш аккаунт %{connection}"
   connected as user: "Вы подключены к %{connection} как %{username}."
@@ -44,24 +42,13 @@ ru:
   deleted connection error: "Извините, возникла ошибка при отключении аккаунта %{connection}."
   remove connection: "Отключить"
   connection users: "Вот несколько пользователей YouVersion, с кем Вы общаетесь в %{connection}:"
-  connection marketing: "Использовать YouVersion веселее с друзьями! Привяжите свой аккаунт YouVersion к социальным сетям и моментально ищите и подписывайтесь на обновления Ваших друзей на YouVersion. Прявязанные аккаунты также позволят Вам делиться Писанием всего за несколько кликов! Помните, мы никогда ничего не опубликуем без Вашего согласия."
+  connection marketing: "Использовать YouVersion веселее с друзьями! Привяжите аккаунт YouVersion к социальным сетям и моментально находите своих друзей на YouVersion. Привязанные аккаунты также позволят делиться Писанием всего за несколько кликов! Мы никогда ничего не опубликуем без вашего согласия."
   next step connections: "Далее: подключите свои аккаунты и найдите друзей"
-  you are now following: "Теперь Вы друзья с %{username}"
-  you are no longer following: "Вы больше не являетесь друзьями с %{username}"
-  user follows: "%{user} добавил Вас в друзья."
-  user does not follow: "%{user} не добавлял Вас в друзья."
-  no following found self: "У Вас ещё нет друзей на YouVersion. Посетите страницу <a href='%{link}'>Поиска Друзей</a> и найдите своих друзей!"
-  no followers found self: "Вас ещё никто не добавлял в друзья на YouVersion. Посетите страницу <a href='%{link}'>Поиска Друзей</a> и найдите своих друзей!"
-  no followers found other: "Пока что никто не добавлял %{username} в друзья."
-  no following found other: "У %{username} пока нет друзей на YouVersion."
-  no likes found: "%{username} ещё не добавлял записи в избранное."
   no notes found: "У %{username} нет заметок."
   no recent activity: "%{username} ещё не проявлял активность."
   no badges found yourself: "Вы ещё не заработали значков."
   no badges found other: "%{username} ещё не заработал значков."
   see users badges: "Посмотреть все значки %{username}"
-  followers: "Вы в друзьях у"
-  following: "Ваши друзья"
   bookmark: "Закладка"
   earned badge date: "Заработан %{username} %{ago} назад"
   badges title: "Значки"
@@ -143,13 +130,6 @@ ru:
   or:
     lower: "или"
     upper: "ИЛИ"
-  likes:
-    my likes: "Понравилось мне"
-    all likes: "Всё понравившееся"
-    none exist blurb: "Извините, здесь ничего не отмечено \"Нравится\"!"
-    likes: "Понравившееся"
-    like button text: "Нравится"
-    unlike button text: "Не нравится"
   notes:
     list title: "Заметки"
     loading community: "Загружаю заметки сообщества..."
@@ -177,9 +157,7 @@ ru:
     not found: "YouVersion позволяет связать видео, аудио, изображения, текст и ссылки на другие веб-сайты с любым стихом или рядом стихов из Библии. Это способ участия в сообществе YouVersion &mdash; делиться тем, чему Вы учитесь и о чем думаете, когда изучаете Писание. Начните прямо сейчас, выбрав стихи в Окне чтения Библии и добавив свои мысли или медиа-файлы. Это так просто."
     cancel: "Отменить"
     pop out: "В новом окне"
-    notes i like: "Понравившиеся заметки"
     none found: "Заметок не найдено..."
-    see my likes: "Всё понравившееся"
     successfully deleted: "Заметка удалена"
   ref:
     loading secondary: "Загружаю ссылки в параллельном переводе..."
@@ -206,8 +184,6 @@ ru:
   users:
     unverified heading: "Почти!"
     unverified message: "Похоже, вы пытаетесь войти в учётную запись, которые не прошла верификацию. Остался один последний шаг: просто нажмите на ссылку для подтверждения аккаунта в письме, которое вы получили от YouVersion. Не можете найти письмо? Проверьте папку со спамом или <a href='%{resend_path}'>вышлите повторное подтверждение на электронную почту</ a>."
-    not following you: "Не добавлял вас в друзья"
-    following you: "Добавил вас в друзья"
     reset connection: "Извините, произошла ошибка. Пожалуйста, удалите подключение и подключите его снова."
     settings: "Настройки"
     no connection friends: "Ваших друзей по %{connection} пока нет на YouVersion."
@@ -223,15 +199,8 @@ ru:
     welcome to youversion: "Добро пожаловать в сообщество YouVersion!"
     confirm email: "Пожалуйста, проверьте эл. почту и перейдите по ссылке подтверждения аккаунта."
     sign up for an account: "Создать бесплатный аккаунт YouVersion"
-    follow: "Добавить в друзья"
-    follow user: "Добавить %{user} в друзья"
-    unfollow: "Удалить из друзей"
-    unfollow user: "Удалить %{user} из друзей"
-    following title: "Мои друзья"
-    user does not follow you: "%{user} не добавил Вас в друзья."
     recent activity: "Последние действия"
     my recent_activity: "Последние действия"
-    started following: "Добавили в друзья:"
     subscribed to plan: "Пользователи, подписанные на %{plan}"
     reading: "Пользователи, читающие по этому плану"
     subscribed previously: "Начат %{time_ago} назад"
@@ -262,8 +231,6 @@ ru:
     user friends: "Друзья %{user}"
     my bookmarks: "Мои закладки"
     user bookmarks: "Закладки %{user}"
-    my likes: "Понравившееся мне"
-    user likes: "Понравившееся %{user}"
     my badges: "Мои значки"
     revised date: "Последний раз редактировалось %{date}"
     update email copy: "Введите новый адрес электронной почты и нажмите \"Изменить email\". Мы вышлем Вам письмо со ссылкой для подтверждения нового адреса электронной почты."
@@ -689,7 +656,7 @@ ru:
       our action: "Мы получили уведомление об этой ошибке и займёмся её решением как можно скорее."
     home:
       hero:
-        heading: "Бесплатная Библия на вашем мобильном устройстве и компьютере."
+        heading: "Бесплатная Библия на вашем мобильном устройстве и ПК."
         description: "YouVersion — бесплатный онлайн сервис, который делает Слово Божие частью вашей повседневной жизни."
         learn more: "узнать больше"
         start reading: "Начать чтение"
@@ -753,3 +720,6 @@ ru:
     public domain: "Всеобщее достояние"
     loading: "Загружаю список переводов..."
     load error: "Извините, нам не удалось загрузить список переводов. Закройте это меню и откройте его снова."
+  reader help:
+    title: "Выберите стих..."
+    line 1: "Нажмите на любой стих или набор стихов, чтобы добавить закладку, выделить маркером, написать заметку или поделиться с друзьями."
