--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -1,14 +1,20 @@
 sv:
   api:
+    users agree bool: "Du måste acceptera bestämmelser och villkor för att skapa ett konto."
+    users confirm password matches: "Det nya lösenordet matchar inte."
     users email email: "E-postadressen är ogiltig."
     users email email rfc: "E-postadressen du angett är inte korrekt."
     users email not available: "Det finns redan ett konto registrerat med den e-postadressen."
     users email not found: "Det finns inget konto med den e-postadressen."
+    users email required: "Du måste ange en e-postadress."
     users hash verified: "Kontot har redan verifierats."
+    users password change: "Ditt nya lösenord måste skilja från ditt gamla lösenord."
     users password length: "Ditt lösenord måste bestå av minst 6 tecken."
+    users password required: "Du måste ange ett lösenord."
     users username alpha numeric extra: "Användarnamnet ska innehålla bokstäver, siffror eller snedstreck."
     users username not available: "Användarnamnet du valt är tyvärr inte ledigt."
     users username or password invalid: "Användarnamnet eller lösenordet är felaktigt."
+    users username required: "Du måste ange ett användarnamn."
   now: "Nu"
   celebrating 50MM: "Firar 50 miljoner installationer!"
   link: "Länk"
@@ -29,8 +35,6 @@ sv:
   facebook: "Facebook"
   share success: "Ditt meddelande har delats"
   share error: "Ett fel uppstod när du försökte dela ditt meddelande. Försök igen."
-  error following user: "Ett fel uppstod när du försökte följa denna användaren."
-  error unfollowing user: "Ett fel uppstod när du slutade följa denna användaren."
   google plus: "Google+"
   connect to: "Anslut till ditt %{connection}-konto"
   connected as user: "Du är ansluten till %{connection} som %{username}."
@@ -38,24 +42,13 @@ sv:
   deleted connection error: "Ett fel uppstod när du försökte ta bort anslutningen till %{connection}."
   remove connection: "Ta bort"
   connection users: "Här är några YouVersion-användare du är ansluten till på %{connection}:"
-  connection marketing: "YouVersion är roligare med vänner! Länka ditt YouVersion-konto till dina övriga sociala nätverk för att direkt hitta och följa dina vänner på YouVersion. Genom att länka dina konton kan du dela innehåll med bara några klick. Vi kommer aldrig att skicka något utan din tillåtelse."
+  connection marketing: "YouVersion är roligare med vänner! Länka ditt YouVersion-konto till dina andra sociala nätverk och hitta direkt dina vänner på YouVersion. Genom att länka dina konton kan du också dela innehåll med bara några klick. Vi kommer aldrig att publicera något utan ditt godkännande."
   next step connections: "Nästa: Länka ditt konto och hitta dina vänner."
-  you are now following: "Du följer nu %{username}"
-  you are no longer following: "Du följer inte längre %{username}"
-  user follows: "%{user} följer dig."
-  user does not follow: "%{user} följer inte dig."
-  no following found self: "Du följer ingen ännu. Gå till <a href='%{link}'>hitta vänner</a> och hitta några vänner!"
-  no followers found self: "Du har inga följare ännu. Gå till <a href='%{link}'>hitta vänner</a> och hitta några vänner!"
-  no followers found other: "Ingen följer %{username} ännu."
-  no following found other: "%{username} följer ingen ännu."
-  no likes found: "%{username} har inte gillat något än."
   no notes found: "%{username} har inga anteckningar."
   no recent activity: "%{username} har inga nyliga aktiviteter."
   no badges found yourself: "Du har inte fått några medaljer än."
   no badges found other: "%{username} har inte fått några medaljer än."
   see users badges: "Se alla %{username}s medaljer"
-  followers: "Följare"
-  following: "Följer"
   bookmark: "Bokmärke"
   earned badge date: "Förtjänad av %{username} för %{ago} sedan"
   badges title: "Medaljer"
@@ -137,13 +130,6 @@ sv:
   or:
     lower: "eller"
     upper: "ELLER"
-  likes:
-    my likes: "Mina gillade"
-    all likes: "Alla gillade"
-    none exist blurb: "Inga gillade här!"
-    likes: "Gillade"
-    like button text: "Gilla"
-    unlike button text: "Sluta gilla"
   notes:
     list title: "Anteckningar"
     loading community: "Laddar delade anteckningar..."
@@ -171,9 +157,7 @@ sv:
     not found: "YouVersion låter dig associera video, ljud, bilder, text och länkar till andra webbplatser med någon vers eller serie av verser i Bibeln. Det är ett sätt att delta i YouVersion-gemenskapen genom att dela med vad du lär dig och tänker på när du engagerar dig i Skriften. Kom igång nu genom att välja en eller flera verser i Bibel-läsaren och lägga till anteckningen. Så lätt är det."
     cancel: "Avbryt"
     pop out: "Visa i eget fönster"
-    notes i like: "Anteckningar jag gillar"
     none found: "Inga anteckningar hittades..."
-    see my likes: "Se alla mina gillade"
     successfully deleted: "Anteckning borttagen"
   ref:
     loading secondary: "Laddar hänvisningar i sekundär översättning"
@@ -200,8 +184,6 @@ sv:
   users:
     unverified heading: "Nästan klar!"
     unverified message: "Det ser ut som att du försöker logga in med ett konto som inte färdigkonfigurerat än.  Du har bara ett steg kvar: klicka helt enkelt på verifieringslänken i e-brevet med bekräftelse som du har fått från YouVersion. Kan du inte hitta det? Kolla bland skräppost eller <a href='%{resend_path}'>Skicka om e-brevet med bekräftelse</a>."
-    not following you: "Följer dig inte"
-    following you: "Följer dig"
     reset connection: "Ett fel har tyvärr inträffat. Stäng ner och försök sedan att återansluta."
     settings: "Inställningar"
     no connection friends: "Ingen av dina vänner på %{connection} finns ännu på YouVerson."
@@ -217,15 +199,8 @@ sv:
     welcome to youversion: "Välkommen till YouVersion-gemenskapen!"
     confirm email: "Kontrollera din e-post och klicka på länken för att bekräfta din registrering."
     sign up for an account: "Skapa ett gratis YouVersion-konto"
-    follow: "Följ"
-    follow user: "Följ %{user}"
-    unfollow: "Sluta följ"
-    unfollow user: "Sluta följ %{user}"
-    following title: "Personer jag följer"
-    user does not follow you: "%{user} följer inte dig."
     recent activity: "Senaste aktivitet"
     my recent_activity: "Min senaste aktivitet"
-    started following: "Börjat följa"
     subscribed to plan: "Användare som prenumerera på %{plan}"
     reading: "Användare som läser denna plan"
     subscribed previously: "Startad %{time_ago} sedan"
@@ -236,6 +211,7 @@ sv:
     other user profile: "%{username}s profil"
     my password: "Ändra mitt lösenord"
     edit password: "Ändra lösenord"
+    edit password errors: "Följande fel förhindrade dig att ändra lösenord:"
     picture: "Bild"
     edit picture: "Ändra bild"
     edit notifications: "Hantera meddelanden"
@@ -255,8 +231,6 @@ sv:
     user friends: "%{user}s vänner"
     my bookmarks: "Mina bokmärken"
     user bookmarks: "%{user}s bokmärken"
-    my likes: "Mina länkar"
-    user likes: "%{user}s länkar"
     my badges: "Mina medaljer"
     revised date: "Senast ändrad den %{date}"
     update email copy: "Ange en ny e-postadress och klicka Uppdatera e-post. Vi kommer att skicka dig en länk för att bekräfta din nya e-postadress."
@@ -528,9 +502,26 @@ sv:
     must start to complete: "Starta denna läsplan för att spara utförd läsning!"
     invalid reference: "En av skrifterna refererade för denna läsning verka inte existera i den valda översättningen. Försök att välja en annan översättning ovan. Om du fortsätter se detta meddelande, var snäll och meddela vår <a href='%{support_url}'>supportgrupp</a> om problemet. "
     sidebar notice: "Du visar en läsplan."
+    completed notice: "Grattis! Du har fullföljt din läsplan."
     exit: "Avsluta"
+    loading sidebar content: "Laddar innehåll i sidofällt..."
   licenses:
+    authorized:
+      heading: "Ditt innehåll har godkänts"
+      description: "Du kan nu <a href='%{content_link}'>se innehållet du har köpt</a> från %{vendor} på YouVersion!"
+    has errors: "Det fanns fel i din förfrågan:"
+    confirm:
+      email: "För att godkänna videoinnehåll du köpt, kontrollera din e-post efter ett e-brev med bekräftelse från YouVersion och klicka på länken i det för att bekräfta din registrering."
+    request:
+      invalid_vendor_signature: "Licensvalidering misslyckades: Felaktig försäljarsignatur"
+      invalid_vendor_id: "Licensvalidering misslyckades: Felaktig försäljar-ID"
+      invalid_item_ids: "Licensvalidering misslyckades: Felaktigt objekt"
+    vendor_transaction_id:
+      duplicate: "Transaktions-ID: Detta transaktions-ID har redan registrerats"
     auth:
+      login notice: "För att bekräfta köpet, logga in med ditt YouVersion-konto nedan eller <a href='/sign-up?source=licenses'>%{signup}</a>."
+      signup notice: "För att bekräfta köpet, registrera ditt YouVersion-konto gratis nedan eller <a href='/sign-in?source=licenses'>%{login}</a> om du redan har ett konto."
+      signup link text: "registrera dig för ett gratis-konto"
       login link text: "Logga in"
   registration:
     placeholder:
@@ -706,6 +697,8 @@ sv:
       translation notes: "Fotnoter"
       cross references: "Korsreferenser"
   app errors:
+    404 plans explanation: "Söker du efter planen <a href='%{plan_path}'>%{title}</a>?"
+    404 contact support: "Har du problem? Kontakta vår <a href='%{support_url}'>supportgrupp</a>."
     404 explanation: "Du kan pröva att gå tillbaka till <a href='%{reader_path}'>startsidan</a>.\nOm du fortfarande har problem kan du kontakta vår <a href='%{support_url}'>supportgrupp</a>."
     404 message: "Tyvärr, men sidan du letar efter kan inte hittas."
     408 message: "Tyvärr svarade inte våra servrar i tid."
@@ -727,3 +720,6 @@ sv:
     public domain: "Allmän egendom"
     loading: "Laddar fler översättningar..."
     load error: "Beklagar, ett problem uppstod och det gick inte att ladda ner fler översättningar. Stäng denna meny och starta om för att försöka igen."
+  reader help:
+    title: "Välj en vers..."
+    line 1: "Klicka eller tryck på en vers eller samling av verser för att bokmärka, markera, skapa en anteckning eller dela med dina vänner!"
