--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -35,8 +35,6 @@ uk:
   facebook: "Facebook"
   share success: "Повідомлення розіслано іншим."
   share error: "Вибачте, сталась помилка в розсиланні вашого повідомлення. Будь-ласка спробуйте знову."
-  error following user: "Нажаль, під час увімкнення слідкування за цим користувачем виникла помилка"
-  error unfollowing user: "Нажаль, під час скасування слідкування за цим користувачем виникла помилка"
   google plus: "Google +"
   connect to: "Приєднати до Вашого облікового запису %{connection}"
   connected as user: "Ви приєднали %{connection} як %{username}."
@@ -44,24 +42,13 @@ uk:
   deleted connection error: "На жаль, під час скасування Вашого зв'язку з %{connection} виникла помилка."
   remove connection: "Видалити"
   connection users: "Користувачі YouVersion з якими ви знайомі через %{connection}:"
-  connection marketing: "YouVersion цікавіший з друзями! Об'єднайте ваш акаунт YouVersion з іншими соціальними мережами та знаходьте друзів з YouVersion. Також це дає змогу миттєво ділитись контентом. Жодної інформаії не буде опубліковано без вашого відома. "
+  connection marketing: "YouVersion стає ще цікавішим з друзями! Прив'яжіть ваш профіль YouVersion до інших соціальних мереж і миттєво знайдіть своїх друзів на YouVersion. Прив'язування облікових записів також дозволяє обмінюватися контентом за допомогою кількох натискань. Ми ніколи не опублікуємо жодного повідомлення без вашого дозволу."
   next step connections: "Наступний крок: Об'єднайте профілі та знайдіть друзів."
-  you are now following: "Ви підписались на читання %{username}"
-  you are no longer following: "Ви відписались від %{username}"
-  user follows: "%{user} підписався на ваші оновлення."
-  user does not follow: "%{user} відписався від вас."
-  no following found self: "Ви не підписані на жодного користувача. Відвідайте сторінку <a href='%{link}'>Знайти друзів</a> та знайдіть друзів!"
-  no followers found self: "У вас ще немає послідоників.. Перейдіть до <a href='%{link}'>Знайдіть друзів</a> сторінці та шукайте друзів!"
-  no followers found other: "Ніхто ще не наглядає за %{username}."
-  no following found other: "%{username} поки що ні за ким не слідкує."
-  no likes found: "%{username} ще ніхто не вподобав.."
   no notes found: "%{username} не має записів."
   no recent activity: "%{username} не має нещодавньої діяльності."
   no badges found yourself: "Ви поки що не заробили жодного значка."
   no badges found other: "%{username} ще не заробив жодного значка."
   see users badges: "Переглянути всі %{username}'s значки"
-  followers: "Послідовники"
-  following: "Слідкуєте"
   bookmark: "Закладка"
   earned badge date: "Зароблені %{username} %{ago} тому"
   badges title: "Значки"
@@ -143,13 +130,6 @@ uk:
   or:
     lower: "або"
     upper: "АБО"
-  likes:
-    my likes: "Мої вподобання"
-    all likes: "Всі вподобання"
-    none exist blurb: "Вибачте, вподобань немає!"
-    likes: "Подобається"
-    like button text: "Подобається"
-    unlike button text: "Не подобається"
   notes:
     list title: "Нотатки"
     loading community: "Завантажуються нотатки спільноти…"
@@ -177,9 +157,7 @@ uk:
     not found: "YouVersion дозволяє пересилати відео, аудіо, фото, тексти і посилання на інші веб-сайти з віршем або серією віршів з Біблії. Ви берете участь у спілці YouVersion тим, що ділитеся вивченим, а також своїми думками під час роботи з Писанням. Розпочніть зараз: оберіть вірш(і) у програмі читання Біблії і створіть запис. Це дуже просто."
     cancel: "Відмінити"
     pop out: "Підказки"
-    notes i like: "Улюблені нотатки"
     none found: "Нотатки не знайдено"
-    see my likes: "Переглянути вподобання"
     successfully deleted: "Нотатку видалено"
   ref:
     loading secondary: "Завантажуються посилання у другій версії…"
@@ -206,8 +184,6 @@ uk:
   users:
     unverified heading: "Майже готово!"
     unverified message: "Здається ви намагаєтеся увійти в обліковий запис, яка не пройшла верифікацію. Залишився один останній крок: просто натисніть на посилання для підтвердження профілю в листі, який ви отримали від YouVersion. Не можете знайти лист? Перевірте папку зі спамом або <a href='%{resend_path}'> вишліть повторне підтвердження на електронну пошту </a>."
-    not following you: "не підписаний(а) на вас"
-    following you: "підписаний(а) на вас"
     reset connection: "Вибачте, виникла помилка. Будь ласка, вилучіть підключення та підключіть його знову."
     settings: "Налаштування"
     no connection friends: "Ваших друзів із %{connection} поки що немає на YouVersion."
@@ -215,23 +191,16 @@ uk:
     profile form errors: "Наступна помилка(и) унеможливили оновлення вашого профілю:"
     email address: "Адреса ел.пошти"
     user name: "Ім'я користувача"
-    agreement: "Я погоджуюсь з YouVersion %{terms_link}."
-    terms and conditions: "умови використання та політика конфіденційності"
+    agreement: "Я погоджуюсь з %{terms_link} YouVersion."
+    terms and conditions: "умовами використання та політикою конфіденційності"
     facebook sign up success: "Чудово! Ви авторизувалися через Facebook. Оберіть ім'я користувача і пароль для YouVersion і продовжуйте."
     register: "Реєстрація"
     thanks for registering: "Дякуємо за реєстрацію!"
     welcome to youversion: "Ласкаво просимо до спільноти YouVersion!"
     confirm email: "Будь-ласка перевірте свій email і натисніть посилання, щоб підтвердити реєстрацію."
     sign up for an account: "Створити безкоштовний обліковий запис YouVersion"
-    follow: "Слідкувати"
-    follow user: "Слідкуйте за %{user}"
-    unfollow: "Не слідкувати"
-    unfollow user: "Відписатися від %{user}"
-    following title: "Люди, за якими я слідкую"
-    user does not follow you: "%{user} відписався від вас."
     recent activity: "Нещодавня діяльність"
     my recent_activity: "Нещодавня діяльність"
-    started following: "Розпочати наслідування"
     subscribed to plan: "Користувач підписався на %{plan}"
     reading: "Користувачі Читають за Цим Планом"
     subscribed previously: "Розпочато %{time_ago} тому"
@@ -262,8 +231,6 @@ uk:
     user friends: "%{user}'s Друзі"
     my bookmarks: "Мої закладки"
     user bookmarks: "%{user}'s Закладки"
-    my likes: "Мої вподобання"
-    user likes: "%{user}'s Вподобання"
     my badges: "Значки"
     revised date: "Останнє редагування %{date}"
     update email copy: "Вкажіть свою електронну адресу і натисніть Оновити адресу. Ми надішлемо вам посилання для підтвердження нової адреси."
@@ -326,11 +293,11 @@ uk:
       description title: "Опис послуги"
       description text: "LifeChurch.tv через YouVersion безкоштовно надає користувачам доступ до різноманітних послуг, включаючи, в тому числі, перегляд відео онлайн, публікації та коментарі в блогах, інші комунікаційні засоби, форуми та персоналізоване Інформаційне вміст. Використовуючи YouVersion, Ви усвідомлюєте, що таке використання може включати отримання повідомлень від LiferChurch.tv, в тому числі повідомлень про послуги, адміністративних повідомлень і інших повідомлень, на які Ви підписалися в індивідуальному порядку. Ви розумієте і погоджуєтесь з тим, що несете відповідальність за отримання доступу до YouVersion, для якого може вимагатися обладнання і оплата, стягнута третіми особами (наприклад, оплата послуг інтернет-провайдера, оплата сеансу зв'язку чи інші витрати, пов'язані з відображенням і доставкою повідомлень) ."
       registration title: "Ваші зобов'язання при реєстрації"
-      registration text: "Ви зобов'язуєтесь: <ul><li> надавати про себе точну і повну інформацію, коли це вимагається згідно з реєстраційною формою (формами) YouVersion (\"Реєстраційні дані\"), і </li>»<li> своєчасно оновлювати і підтримувати свої Реєстраційні дані в точному і повному стані. Якщо LifeChurch.tv вважає, що надана Вами інформація невірна, неповна, застаріла або неточна, LifeChurch.tv має право призупинити або скасувати Вашу реєстрацію та відмовити Вам в користуванні послугою YouVersion (або будь-якою її частиною) як в даний час, так і в майбутньому. LifeChurch.tv серйозно ставиться до безпеки та конфіденційності всіх своїх користувачів, особливо дітей. З цієї причини батьки, які дозволяють своїм дітям, які не досягли 13 років, користуватися YouVersion, повинні підтвердити, що розуміють той факт, що послуга розрахована на широку аудиторію. Відповідно, будучи законним опікуном своєї дитини, Ви приймаєте на себе відповідальність за прийняття рішення про те, чи прийнятна послуга YouVersion для Вашої дитини. </li></ul>"
+      registration text: "Ви зобов'язуєтесь: <ul><li> надавати про себе точну і повну інформацію, коли це вимагається згідно з реєстраційною формою (формами) YouVersion (\"Реєстраційні дані\"), і </li> <li> своєчасно оновлювати і підтримувати свої Реєстраційні дані в точному і повному стані. Якщо LifeChurch.tv вважає, що надана Вами інформація невірна, неповна, застаріла або неточна, LifeChurch.tv має право призупинити або скасувати Вашу реєстрацію та відмовити Вам в користуванні послугою YouVersion (або будь-якою її частиною) як в даний час, так і в майбутньому. LifeChurch.tv серйозно ставиться до безпеки та конфіденційності всіх своїх користувачів, особливо дітей. З цієї причини батьки, які дозволяють своїм дітям, які не досягли 13 років, користуватися YouVersion, повинні підтвердити, що розуміють той факт, що послуга розрахована на широку аудиторію. Відповідно, будучи законним опікуном своєї дитини, Ви приймаєте на себе відповідальність за прийняття рішення про те, чи прийнятна послуга YouVersion для Вашої дитини. </li></ul>"
       privacy title: "Політика LifeChurch.tv щодо недоторканності приватного життя"
       privacy text: "Реєстраційні дані та інша інформація про Вас обпрацьовуються відповідно до нашої Політики конфіденційності, яку можна знайти за адресою <a href='http://youversion.com/privacy'> http://youversion.com/privacy </a>. Ви розумієте, що, використовуючи YouVersion, Ви даєте свою згоду на збір і використання (у відповідності з Політикою конфіденційності) цієї інформації, в тому числі на передачу цієї інформації в США і/або інші країни для зберігання, опрацьовування та використання <a href = 'http://LifeChurch.tv'> Lifechurch.tv </a>."
       account title: "Обліковий запис користувача, пароль і безпека"
-      account text: "Після завершення процесу реєстрації в YouVersion Ви отримаєте пароль та обліковий запис. Ви несете повну відповідальність за збереження Вашого облікового запису і пароля, а також за всі дії, вчинені з використанням Вашого пароля чи облікового запису. Ви погоджуєтеся:<ul><li> негайно повідомити LifeChurch.tv про будь-які випадки несанкціонованого використання Вашого пароля чи облікового запису і про будь-які інші порушення системи безпеки, а також </li><li> виходити з свого облікового запису після закінчення кожної робочої сесії.</li></ul>"
+      account text: "Після завершення процесу реєстрації в YouVersion Ви отримаєте пароль та обліковий запис. Ви несете повну відповідальність за збереження Вашого облікового запису і пароля, а також за всі дії, вчинені з використанням Вашого пароля чи облікового запису. Ви погоджуєтеся:<ul><li> негайно повідомити LifeChurch.tv про будь-які випадки несанкціонованого використання Вашого пароля чи облікового запису і про будь-які інші порушення системи безпеки, </li><li> а також  виходити з свого облікового запису після закінчення кожної робочої сесії.</li></ul>"
       conduct title: "Поведінка користувача"
       conduct text: "Ви розумієте, що одноосібну відповідальність за всі відомості, дані, тексти, програми, музику, звуки, фотографії, графічні та відеоматеріали, повідомлення, теги, повідомлення в блогах або форумах і інші матеріали (\"Інформаційне вміст\"), опубліковані для загального користування або передані в приватному порядку, несе та особа, яка робить цей Інформаційний вміст доступним. Це означає, що Ви несете повну відповідальність за увесь Інформаційний вміст, який Ви завантажуєте, публікуєте, відсилаєте електронною поштою, передаєте або яким-небудь іншим способом робите доступним за допомогою YouVersion. Незважаючи на те, що LifeChurch.tv контролює Інформаційний вміст, що публікується на YouVersion, LifeChurch.tv не може розумним чином гарантувати точність, повноту, якість або прийнятність такого. Ви розумієте і погоджуєтесь з тим, що, використовуючи YouVersion, Ви можете зіткнутися з Інформаційним вмістом, який є образливим, непристойним або спірним. Ви погоджуєтесь не використовувати YouVersion для: <ul type='none'> <li> завантаження, розміщення, відправки по електронній пошті, передачі або будь-якого іншого способу публікації Інформаційного вмісту, який є незаконним, шкідливим, загрозливим, лайливим, образливим, делікатним, наклепницьким, вульгарним, непристойним, порочить, порушує недоторканність приватного життя інших осіб, сповнений ненависті, є дискримінаційним або викликає заперечення по расовим, етнічним чи інших міркуванням; </li> <li> заподіяння шкоди неповнолітнім особам у будь-якій формі; </li> <li> видачі себе за іншу особу або представника організації без достатніх на те прав, у тому числі за співробітників LifreChurch.tv, за модераторів форумів, за власників веб-вузлів; а також для введення в оману або спотворення фактів про характер Ваших відносин з приватними особами або організаціями чи Вашої приналежності до таких; </li> <li> підробки заголовків чи інших маніпуляцій з ідентифікаторами з метою приховати походження Інформаційного вмісту, переданого за допомогою YouVersion; </ li> <li> завантаження, розміщення, надсилання по електронній пошті, передачі чи будь-якого іншого способу публікації інформаційного вмісту, який Ви не маєте права публікувати за яким-небудь законом або згідно деяких контрактних чи фідуціарних відносин (наприклад, внутрішня інформація, службова та конфіденційна інформація, отримана для службового використання або на умовах угоди про нерозголошення); </li> <li> завантаження, розміщення, надсилання по електронній пошті, передачі або будь-якого іншого способу публікації інформаційного вмісту, який порушує права будь-якої сторони на будь-який патент, товарний знак, комерційну таємницю, авторські права або інші права власності (\"Права\"); </li> <li> завантаження, розміщення, надсилання по електронній пошті, передачі або будь-якого іншого способу публікації неузгоджених і неавторизованих рекламних матеріалів і інформації, рекламних повідомлень, непотрібної рекламної кореспонденції, \"спаму\", \" листів по ланцюжку \"для масової розсилки,\" схем-пірамід \"або будь-який інший форми нав'язування послуг; </li> <li> завантаження, розміщення, надсилання по електронній пошті, передачі або будь-якого іншого способу публікації будь-яких матеріалів, що містять програмні віруси або інші комп'ютерні коди, файли або програми, призначені для порушення, знищення або обмеження функціональності будь-якого комп'ютерного програмного забезпечення або комп'ютерного або телекомунікаційного обладнання; </li> <li> порушення нормального ходу спілкування між користувачами або вчинення будь-яких інших дій, що обмежують можливості інших користувачів брати участь у спілкуванні у режимі реального часу; </li> <li> створення перешкод або порушення роботи YouVersion або серверів або мереж, пов'язаних з YouVersion, а також порушення будь-яких вимог, процедур, правил чи регламентів, які контролюють використання мереж, пов'язаних з YouVersion; </li> <li> навмисного або ненавмисного порушення чинних місцевих, державних або міжнародних законів; </li> <li> надання матеріальної підтримки або ресурсів (або приховання чи замаскування характеру, місця знаходження, джерел або походження матеріальної підтримки та ресурсів) будь-якої організації (організаціям), яку(і) уряд США включив до списку іноземних терористичних організацій відповідно до розділу 219 Закону про імміграцію та громадянство; </li> <li> вистежування, заподіяння утисків чи іншого переслідування інших осіб; та (або) </li> <li> збору або зберігання конфіденційних даних про інших користувачів у зв'язку із забороненим поведінкою і діяльністю, описаними вище. </li> </ul> LifeChurch.tv надає послугу YouVersion на безоплатній основі, для особистої і нематеріальній духовної та (або ) релігійної користі. Ви визнаєте, що LifeChurch.tv може піддавати або не піддавати інформаційний вміст попередньому перегляду, а також що LifeChurch.tv та уповноважені LifeChurch.tv особи мають право (але не обов'язок) на свій розсуд провести попередній перегляд, відмовити в публікації або видалити будь інформаційний вміст, опублікований за допомогою YouVersion, з будь-якої причини. <br> <br> Ви визнаєте, погоджуєтеся і даєте дозвіл на те, що LifeChurch.tv може мати доступ до Вашого інформаційного вмісту та інформації про Ваш обліковий запис, а також зберігати і розкривати їх, якщо така дія буде необхідна в силу закону або сумлінного переконання в тому, що таке збереження або розкриття обґрунтоване необхідністю для того, щоб: <ul> <li> підкоритися судовій процедурі; <li> забезпечити дотримання даних УМОВ; </li> <li> подати відгук на заяву про те, що інформаційний вміст порушує права третіх осіб; </li> <li> відреагувати на Ваш запит в службу роботи з клієнтами; або </li> <li> захистити права, майно або персональну безпеку LifeChurch.tv, її користувачів і населення в цілому. </li> </ul> <br> Ви розумієте, що технічна обробка та передача YouVersion, в тому числі Вашого Інформаційного вмісту, може бути пов'язана з <ul> <li> передачею даних через різні мережі; та </li> <li> змінами, покликаними забезпечити дотримання технічних вимог відповідних мереж або пристроїв і адаптацію до таких вимог. </li> </ul>"
       international title: "Глобальний характер повідомлень"
@@ -564,7 +531,7 @@ uk:
     with email: "Зареєструйтеся через свою електронну пошту"
     with facebook: "Зареєструйтеся через Facebook"
     benefits title: "Отримайте Усі можливості"
-    benefits blurb: "Створення облікового запису дає вам доступ до інших засобів таких як закладки і нотатки. Вони будуть доступні на будь-якому пристрої, де ви зареєстровані. Обліковий запис спрощує вам спілкування з друзями стосовно Біблії, отже приділіть хвилинку і підпишіться!"
+    benefits blurb: "Створення облікового запису дає вам доступ до інших засобів таких як закладки і нотатки. Вони будуть доступні на будь-якому пристрої, де ви зареєстровані. Обліковий запис спрощує вам спілкування з друзями стосовно Біблії, отже приділіть хвилинку і зареєструйтеся!"
     plan blurb: "Схоже ви хочете розпочати читання за Планом. Чудово! Плани допомагають зробити Біблію частиною щоденного життя. Підпишіться або створіть обліковий запис і розпочинайте!"
     bookmark blurb: "Здається, ви хочете використати закладку. Чудово! Закладки допомагають відстежити вірші, що ви плануєте завчити, поділитись, або позначити як улюблені. Підпишіться або створіть власний обліковий запис нижче та розпочинайте! "
     friends blurb: "Здається, ви хочете контактувати з Друзями. Хороша ідея! Ви зможете поділитися тим, що вивчаєте і допомогти іншим притримуватись плану читання. Підпишіться або створіть обліковий запис та розпочинайте!"
@@ -753,3 +720,6 @@ uk:
     public domain: "Загальнодоступний домен"
     loading: "Завантажуються інші версії…"
     load error: "На жаль, виникла проблема при завантаженні інших версій. Закрийте це меню і спробуйте відкрити знову."
+  reader help:
+    title: "Вибрати вірш…"
+    line 1: "Клацайте або натискайте на будь-який вірш чи збірку віршів, щоб закласти, виділити, створити нотатку або поділитися з друзями!"
