--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -35,8 +35,6 @@ vi:
   facebook: "Facebook"
   share success: "Thông điệp của bạn đã được chia sẻ."
   share error: "Xin lỗi bạn, có lỗi kỹ thuật khi chia sẻ thông điệp. Xin hãy thử lại."
-  error following user: "Báo lỗi khi theo người sử dụng này!"
-  error unfollowing user: "Báo lỗi khi ngừng theo người sử dụng này!"
   google plus: "Google +"
   connect to: "Kết nối với tài khoản %{connection} của bạn"
   connected as user: "Bạn đã kết nối %{connection} với tên %{username}."
@@ -44,24 +42,13 @@ vi:
   deleted connection error: "Báo lỗi khi tháo bỏ kết nối với %{connection}!"
   remove connection: "Tháo bỏ"
   connection users: "Vài người sử dụng YouVersion mà bạn kết nối trên %{connection}:"
-  connection marketing: "YouVersion sẽ càng thú vị hơn cùng bạn bè! Hãy kết nối tài khoản của bạn với các trang xã hội, tìm và theo bạn bè của bạn trên YouVersion, để bạn có thể chia sẻ kinh nghiệm của mình chỉ với vài cú nhấp chuột. Chúng tôi sẽ không đăng tải bất cứ gì chưa được bạn cho phép."
+  connection marketing: "Càng đông càng vui! Hãy kết nối tài khoản YouVersion của bạn với các mạng xã hội khác và tìm thấy bạn bè của bạn ngay trên YouVersion. Kết nối tài khoản cũng giúp bạn chia sẻ nhanh hơn. Những gì được bạn cho phép mới được đăng tải."
   next step connections: "Kế tiếp: Kết nối tài khoản của bạn và tìm kiếm bạn bè"
-  you are now following: "Giờ, bạn đang theo %{username}"
-  you are no longer following: "Bạn đã ngừng theo %{username}"
-  user follows: "%{user} đang theo bạn"
-  user does not follow: "%{user} không theo bạn"
-  no following found self: "Bạn chưa theo ai cả. Hãy vào trang <a href='%{link}'>Tìm kiếm bạn bè</a> để kết nối với họ!"
-  no followers found self: "Chưa ai theo bạn cả. Hãy vào trang <a href='%{link}'>Tìm kiếm bạn bè</a> để kết nối với họ!"
-  no followers found other: "Chưa ai theo %{username} cả"
-  no following found other: "%{username} chưa theo ai cả"
-  no likes found: "%{username} chưa thích gì cả."
   no notes found: "%{username} chưa có ghi chú nào."
   no recent activity: "%{username} không có hoạt động gần đây."
   no badges found yourself: "Bạn chưa có huy hiệu nào."
   no badges found other: "%{username} chưa có huy hiệu nào."
   see users badges: "Xem tất cả huy hiệu của %{username}"
-  followers: "Người theo"
-  following: "Theo dõi"
   bookmark: "Đánh dấu"
   earned badge date: "Được %{username} nhận vào %{ago} trước"
   badges title: "Huy hiệu"
@@ -143,13 +130,6 @@ vi:
   or:
     lower: "hoặc"
     upper: "HOẶC"
-  likes:
-    my likes: "Các ưa thích của tôi"
-    all likes: "Tất cả ưa thích"
-    none exist blurb: "Xin lỗi, không có ưa thích nào!"
-    likes: "Ưa thích"
-    like button text: "Thích"
-    unlike button text: "Không thích"
   notes:
     list title: "Ghi chú"
     loading community: "Đang tải lên các ghi chú cộng đồng..."
@@ -177,9 +157,7 @@ vi:
     not found: "YouVersion cho phép bạn kết nối video, audio, hình ảnh, văn bản, và đường dẫn đến các trang mạng khác với bất kỳ câu hay đoạn Kinh Thánh nào. Bạn có thể dự phần vào cộng đồng YouVersion bằng cách học hỏi và chia sẻ những suy ngẫm của mình về Lời Chúa. Hãy bắt đầu ngay bây giờ bằng cách chọn một hoặc vài câu Kinh Thánh trong bài đọc để thêm vào ghi chú của bạn. Chỉ đơn giản vậy thôi!"
     cancel: "Hủy"
     pop out: "Hiện lên"
-    notes i like: "Các ghi chú tôi thích"
     none found: "Không tìm thấy ghi chú nào..."
-    see my likes: "Xem tất cả ưa thích của tôi"
     successfully deleted: "Ghi chú đã tháo bỏ"
   ref:
     loading secondary: "Đang tải các tham khảo trong bản song hành..."
@@ -206,8 +184,6 @@ vi:
   users:
     unverified heading: "Gần xong rồi!"
     unverified message: "Hình như bạn đang cố đăng nhập với một tài khoản chưa được thiết lập hoàn chỉnh. Chỉ còn một bước nữa: nhấp vào đường dẫn trong email xác nhận từ YouVersion. Nếu bạn không tìm thấy nó, hãy kiểm tra hòm thư rác của bạn, hoặc yêu cầu <a href='%{resend_path}'>gởi lại email xác nhận</a>."
-    not following you: "Không theo bạn"
-    following you: "Đang theo bạn"
     reset connection: "Có lỗi kỹ thuật, xin hãy tháo bỏ và kết nối lại."
     settings: "Cài đặt"
     no connection friends: "Chưa có bạn bè nào của bạn trên %{connection} sử dụng YouVersion."
@@ -223,15 +199,8 @@ vi:
     welcome to youversion: "Chào mừng bạn gia nhập cộng đồng YouVersion!"
     confirm email: "Hãy kiểm tra email và bấm vào đường dẫn để xác nhận đăng ký của bạn."
     sign up for an account: "Tạo tài khoản YouVersion miễn phí"
-    follow: "Theo dõi"
-    follow user: "Theo %{user}"
-    unfollow: "Ngừng theo"
-    unfollow user: "Ngừng theo %{user}"
-    following title: "Những người tôi theo"
-    user does not follow you: "%{user} không theo bạn"
     recent activity: "Hoạt động gần đây"
     my recent_activity: "Hoạt động gần đây của tôi"
-    started following: "Đã bắt đầu theo"
     subscribed to plan: "Người đăng ký đọc %{plan}"
     reading: "Người đọc kế hoạch này"
     subscribed previously: "Đã bắt đầu %{time_ago} trước"
@@ -262,8 +231,6 @@ vi:
     user friends: "Bạn bè của %{user}"
     my bookmarks: "Đánh dấu của tôi"
     user bookmarks: "Đánh dấu của %{user}"
-    my likes: "Các ưa thích của tôi"
-    user likes: "Các ưa thích của %{user}"
     my badges: "Huy hiệu của tôi"
     revised date: "Chỉnh sửa lần cuối vào %{date}"
     update email copy: "Hãy nhập email mới và bấm \"Cập nhật địa chỉ email\". Chúng tôi sẽ gởi đường dẫn để bạn xác nhận địa chỉ này."
@@ -753,3 +720,6 @@ vi:
     public domain: "Miền công cộng"
     loading: "Đang tải thêm bản dịch..."
     load error: "Xin lỗi bạn, có vấn đề khi tải thêm bản dịch. Hãy đóng trình đơn này rồi mở ra thử lại."
+  reader help:
+    title: "Chọn câu Kinh Thánh..."
+    line 1: "Gõ vào một hoặc nhiều câu Kinh Thánh bất kỳ để đánh dấu, tô màu, tạo ghi chú, hoặc chia sẻ cùng bạn bè!"
