--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -35,8 +35,6 @@ zh-TW:
   facebook: "Facebook"
   share success: "您的信息已經成功分享了。"
   share error: "抱歉，信息分享出錯。請重試。"
-  error following user: "抱歉，在關注此用戶時發生錯誤。"
-  error unfollowing user: "抱歉，在取消關注此用戶時發生錯誤。"
   google plus: "Google +"
   connect to: "連接至您的 %{connection} 帳號"
   connected as user: "您已與 %{connection} 上的 %{username} 帳號連接。"
@@ -44,24 +42,13 @@ zh-TW:
   deleted connection error: "抱歉，在移除與 %{connection} 服務的連接時發生錯誤。"
   remove connection: "移除"
   connection users: "這是一些在 %{connection} 服務上與您有連接的 YouVersion 用戶："
-  connection marketing: "和朋友一起使用 YouVersion 會有更多樂趣！將您的 YouVersion 帳號與其他社交網站連接，就能立即在 YouVersion 上面找到並關注您的朋友。將您的帳號作連接也使您能簡單地在幾個點選後分享您的內容。我們絕不會未經您的同意就張貼任何內容。"
+  connection marketing: "和朋友一起使用 YouVersion 會有更多樂趣！將您的 YouVersion 帳號與其他社交網站連結，就能立即在 YouVersion 上面尋找和關注您的朋友。將您多個帳號作連結也讓您輕鬆點擊就能分享讀經內容。我們絕不會未經您的同意就張貼任何內容。"
   next step connections: "下一步：連接您的帳號並找到您的朋友們"
-  you are now following: "您現在正關注 %{username}"
-  you are no longer following: "您已不再關注 %{username}"
-  user follows: "%{user} 正在關注您。"
-  user does not follow: "%{user} 還没有關注您。"
-  no following found self: "您還未關注任何人。可以到<a href='%{link}'>尋找朋友</a>的頁面找一些朋友！"
-  no followers found self: "目前還沒有人關注您，請到<a href='%{link}'>尋找朋友</a>的頁面找一些朋友！"
-  no followers found other: "目前無人關注 %{username}。"
-  no following found other: "%{username} 還未關注任何人。"
-  no likes found: "%{username} 還未喜歡任何事物。"
   no notes found: "%{username}沒有任何筆記。"
   no recent activity: "%{username}近期沒有任何活動。"
   no badges found yourself: "您還未獲得任何徽章。"
   no badges found other: "%{username}還未獲得任何徽章。"
   see users badges: "查看%{username}的所有徽章"
-  followers: "關注者"
-  following: "正在關注"
   bookmark: "書籤"
   earned badge date: "%{username} 在%{ago}之前獲得的徽章"
   badges title: "徽章"
@@ -143,13 +130,6 @@ zh-TW:
   or:
     lower: "或"
     upper: "或"
-  likes:
-    my likes: "我喜歡的"
-    all likes: "所有喜歡的"
-    none exist blurb: "對不起，這裡沒有喜歡的！"
-    likes: "喜歡"
-    like button text: "喜歡"
-    unlike button text: "取消喜歡"
   notes:
     list title: "筆記"
     loading community: "正在加載社群筆記..."
@@ -177,9 +157,7 @@ zh-TW:
     not found: "YouVersion 允許您將聖經中的任何經句，或是系列的經句關聯到您的影片、音訊、圖像、文字和其他網站的鏈結。這讓您透過分享個人讀經的學習心得與靈修感想來參與 YouVersion的社群。請現在就在聖經閱讀器中選擇經文並增添筆記。就是這麼簡單。"
     cancel: "取消"
     pop out: "跳出"
-    notes i like: "我喜歡的筆記"
     none found: "找不到筆記...."
-    see my likes: "看我所有喜歡的"
     successfully deleted: "筆記已刪除"
   ref:
     loading secondary: "載入第二版本裡的參考經文..."
@@ -206,8 +184,6 @@ zh-TW:
   users:
     unverified heading: "幾乎完成了！"
     unverified message: "看起來您要登錄的賬戶還未完全設置好。不過只差一步了：您只要點擊從YouVersion 發來的確認郵件裡的賬戶驗證連接就行了。若是找不到那份郵件，請查看一下您的垃圾郵件箱，或點擊<a href='%{resend_path}'>重發確認郵件</a>。"
-    not following you: "沒關注您"
-    following you: "在關注您"
     reset connection: "抱歉，出錯了！請移除這個連接然後重新連接。"
     settings: "設定"
     no connection friends: "看來您在%{connection}的朋友還沒有 YouVersion。"
@@ -223,15 +199,8 @@ zh-TW:
     welcome to youversion: "歡迎來到 YouVersion 社群！"
     confirm email: "請檢查您的電子郵件並點選鏈結以確認註冊。"
     sign up for an account: "建立一個免費的 YouVersion 帳號"
-    follow: "關注"
-    follow user: "關注 %{user}"
-    unfollow: "取消關注"
-    unfollow user: "取消關注 %{user}"
-    following title: "我關注的人"
-    user does not follow you: "%{user} 還沒有關注您"
     recent activity: "最近活動"
     my recent_activity: "我的近期活動"
-    started following: "開始關注"
     subscribed to plan: "用戶訂閱了 %{plan}"
     reading: "閱讀此計劃的用戶"
     subscribed previously: "%{time_ago} 前已開始"
@@ -262,8 +231,6 @@ zh-TW:
     user friends: "%{user} 的朋友"
     my bookmarks: "我的書籤"
     user bookmarks: "%{user} 的書籤"
-    my likes: "我所喜歡的"
-    user likes: "%{user} 所喜歡的"
     my badges: "我的徽章"
     revised date: "最後一次修改於%{date}"
     update email copy: "輸入一個新的電子郵件地址並點選【更新電郵】，我們將發送一個鏈結給您來確認您的新電子郵件地址。"
@@ -753,3 +720,6 @@ zh-TW:
     public domain: "公有領域"
     loading: "載入更多譯本..."
     load error: "抱歉，載入更多譯本時發生錯誤，請關掉這個選單，再重新打開嘗試。"
+  reader help:
+    title: "選擇一節經文…"
+    line 1: "點擊任何一個或系列的經節來標記書籤、高亮顯示、創建筆記，或與朋友分享！"
