--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -519,8 +519,8 @@ bg:
     vendor_transaction_id:
       duplicate: "Номер на транзакция: Този номер на транзакция е вече регистриран"
     auth:
-      login notice: "За да валидирате поръчаното си съдържание, моля влезте в акаунта си в YouVersion по-долу или <a href='/sign-up?source=licenses'>%{Регистрирайте}</a>."
-      signup notice: "За да валидирате поръчаното си съдържание, регистрирайте безплатен YouVersion акаунт по-долу или <a href='/sign-in?source=licenses'>%{влезте}</a> , ако вече имате такъв."
+      login notice: "За да валидирате поръчаното си съдържание, моля влезте в акаунта си в YouVersion по-долу или <a href='/sign-up?source=licenses'>%{signup}</a>."
+      signup notice: "За да валидирате поръчаното си съдържание, регистрирайте безплатен YouVersion акаунт по-долу или <a href='/sign-in?source=licenses'>%{login}</a> , ако вече имате такъв."
       signup link text: "Регистрирайте безплатен акаунт"
       login link text: "Влез"
   registration:
@@ -697,7 +697,7 @@ bg:
       translation notes: "Бележки"
       cross references: "Препратки"
   app errors:
-    404 plans explanation: "<a href='%{plan_path}'>%{Име}</a> план ли търсите?"
+    404 plans explanation: "<a href='%{plan_path}'>%{title}</a> план ли търсите?"
     404 contact support: "Имате проблем? Свържете се с <a href='%{support_url}'> нашия екип</a>."
     404 explanation: "Започни тук: <a href='%{reader_path}'>НАЧАЛО</a>. Свържи се с нашия Contact our <a href='%{support_url}'>екип</a>."
     404 message: "Страницата не съществува."
